Mod: Format files and notebooks using black.

--- a/notebooks/augmentation_explorer.ipynb
+++ b/notebooks/augmentation_explorer.ipynb
@@ -55,6 +55,7 @@
    ],
    "source": [
     "import sys\n",
+    "\n",
     "sys.executable"
    ]
   },
@@ -65,6 +66,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.environ[\"MKL_NUM_THREADS\"] = \"2\"\n",
     "os.environ[\"NUMEXPR_NU M_THREADS\"] = \"2\"\n",
     "os.environ[\"OMP_NUM_THREADS\"] = \"2\"\n",
@@ -73,6 +75,7 @@
     "from typing import Union\n",
     "\n",
     "import numpy\n",
+    "\n",
     "# from torchsummary import summary\n",
     "\n",
     "import torch\n",
@@ -83,6 +86,7 @@
     "import torchvision.transforms as transforms\n",
     "from torch.cuda.amp import autocast\n",
     "from torch.optim.lr_scheduler import LambdaLR\n",
+    "\n",
     "# from torch.utils.tensorboard import SummaryWriter\n",
     "from torch.utils.data import DataLoader"
    ]
@@ -95,7 +99,12 @@
    },
    "outputs": [],
    "source": [
-    "from SSL.util.loaders import load_dataset, load_optimizer, load_callbacks, load_preprocesser\n",
+    "from SSL.util.loaders import (\n",
+    "    load_dataset,\n",
+    "    load_optimizer,\n",
+    "    load_callbacks,\n",
+    "    load_preprocesser,\n",
+    ")\n",
     "from SSL.util.model_loader import load_model\n",
     "from SSL.util.checkpoint import CheckPoint, mSummaryWriter\n",
     "from SSL.util.utils import reset_seed, get_datetime, track_maximum, DotDict\n",
@@ -149,39 +158,41 @@
    ],
    "source": [
     "class StretchPadCrop(WaveformTransform):\n",
-    "\tdef __init__(\n",
-    "\t\tself,\n",
-    "\t\trate: Union[Tuple[float, float], float] = (0.9, 1.1),\n",
-    "\t\talign: str = \"random\",\n",
-    "\t\tp: float = 1.0,\n",
-    "\t):\n",
-    "\t\t\"\"\"\n",
-    "\t\t\t:param rate: The ratio of the signal used for resize.\n",
-    "\t\t\t:param align: Alignment to use for cropping or padding. Can be 'left', 'right', 'center' or 'random'.\n",
-    "\t\t\t:param p: The probability to apply the augmentation.\n",
-    "\t\t\"\"\"\n",
-    "\t\tsuper().__init__(p=p)\n",
-    "\t\tself.rate = rate\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        rate: Union[Tuple[float, float], float] = (0.9, 1.1),\n",
+    "        align: str = \"random\",\n",
+    "        p: float = 1.0,\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        :param rate: The ratio of the signal used for resize.\n",
+    "        :param align: Alignment to use for cropping or padding. Can be 'left', 'right', 'center' or 'random'.\n",
+    "        :param p: The probability to apply the augmentation.\n",
+    "        \"\"\"\n",
+    "        super().__init__(p=p)\n",
+    "        self.rate = rate\n",
     "\n",
-    "\t\tself.uniform = Uniform(low=rate[0], high=rate[1]) if not isinstance(rate, float) else None\n",
-    "\t\tself.time_stretch = TimeStretchNearest()\n",
-    "\t\tself.pad_crop = PadCrop(target_length=0, align=align)\n",
+    "        self.uniform = (\n",
+    "            Uniform(low=rate[0], high=rate[1]) if not isinstance(rate, float) else None\n",
+    "        )\n",
+    "        self.time_stretch = TimeStretchNearest()\n",
+    "        self.pad_crop = PadCrop(target_length=0, align=align)\n",
     "\n",
-    "\tdef apply(self, x: Tensor) -> Tensor:\n",
-    "\t\tdata_length = x.shape[-1]\n",
-    "\t\tself.time_stretch.orig_freq = data_length\n",
-    "\t\tself.time_stretch.new_freq = round(data_length * self._get_rate())\n",
-    "\t\tself.pad_crop.set_target_length(data_length)\n",
+    "    def apply(self, x: Tensor) -> Tensor:\n",
+    "        data_length = x.shape[-1]\n",
+    "        self.time_stretch.orig_freq = data_length\n",
+    "        self.time_stretch.new_freq = round(data_length * self._get_rate())\n",
+    "        self.pad_crop.set_target_length(data_length)\n",
     "\n",
-    "\t\tx = self.time_stretch(x)\n",
-    "\t\tx = self.pad_crop(x)\n",
+    "        x = self.time_stretch(x)\n",
+    "        x = self.pad_crop(x)\n",
     "\n",
-    "\t\treturn x\n",
+    "        return x\n",
     "\n",
-    "\tdef _get_rate(self) -> float:\n",
-    "\t\tif self.uniform is not None:\n",
-    "\t\t\tself.rate = self.uniform.sample().item()\n",
-    "\t\treturn self.rate"
+    "    def _get_rate(self) -> float:\n",
+    "        if self.uniform is not None:\n",
+    "            self.rate = self.uniform.sample().item()\n",
+    "        return self.rate"
    ]
   },
   {
@@ -191,12 +202,13 @@
    "outputs": [],
    "source": [
     "import argparse\n",
+    "\n",
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument(\"--from_config\", default=\"\", type=str)\n",
     "parser.add_argument(\"-d\", \"--dataset_root\", default=\"../datasets\", type=str)\n",
     "parser.add_argument(\"-D\", \"--dataset\", default=\"ubs8k\", type=str)\n",
     "\n",
-    "args=parser.parse_args(\"\")"
+    "args = parser.parse_args(\"\")"
    ]
   },
   {
@@ -231,7 +243,9 @@
     }
    ],
    "source": [
-    "_, train_loader, val_loader = load_dataset(args.dataset, \"supervised\", dataset_root=args.dataset_root)"
+    "_, train_loader, val_loader = load_dataset(\n",
+    "    args.dataset, \"supervised\", dataset_root=args.dataset_root\n",
+    ")"
    ]
   },
   {
@@ -289,7 +303,7 @@
     "    norm = lambda x: (x - x.min()) / (x.max() - x.min())\n",
     "    origin = X(idx).squeeze()\n",
     "    augmented = augmentation(origin)\n",
-    "        \n",
+    "\n",
     "    return origin, augmented"
    ]
   },
@@ -302,21 +316,21 @@
     "def display_one(origin, augmented, title):\n",
     "    fig, (top, bot) = plt.subplots(nrows=2, ncols=1)\n",
     "    fig.set_size_inches(15, 7)\n",
-    "    \n",
-    "#     fig.suptitle(title, fontsize=16)\n",
-    "    \n",
+    "\n",
+    "    #     fig.suptitle(title, fontsize=16)\n",
+    "\n",
     "    top.matshow(origin)\n",
     "    bot.matshow(augmented)\n",
-    "    \n",
+    "\n",
     "    top.set_xticks([])\n",
-    "    fig.text(0.26, 0.5, 'Mel channel', va='center', rotation='vertical', fontsize=14)\n",
+    "    fig.text(0.26, 0.5, \"Mel channel\", va=\"center\", rotation=\"vertical\", fontsize=14)\n",
     "\n",
     "    t = np.linspace(0, origin.shape[1], 5)\n",
-    "    bot.xaxis.set_ticks_position('bottom')\n",
+    "    bot.xaxis.set_ticks_position(\"bottom\")\n",
     "    bot.set_xticks(t)\n",
     "    bot.set_xticklabels(range(5))\n",
-    "    bot.set_xlabel('Time (sec)', fontsize=14)\n",
-    "        \n",
+    "    bot.set_xlabel(\"Time (sec)\", fontsize=14)\n",
+    "\n",
     "    plt.show()"
    ]
   },
@@ -429,12 +443,7 @@
    ],
    "source": [
     "aug = sa.FractalTimeDropout(\n",
-    "    ratio=1.0,\n",
-    "    min_chunk_size=20,\n",
-    "    min_chunk=1,\n",
-    "    max_chunk=1,\n",
-    "    void=True,\n",
-    "    cut=True\n",
+    "    ratio=1.0, min_chunk_size=20, min_chunk=1, max_chunk=1, void=True, cut=True\n",
     ")\n",
     "plt.matshow(aug(original) - original, cmap=\"Greys\")"
    ]
@@ -1023,7 +1032,13 @@
     }
    ],
    "source": [
-    "aug = sa.FractalStretch(1.0, freq_min_chunk_size=4, freq_max_chunk_size=8, time_min_chunk_size=16, time_max_chunk_size=48)\n",
+    "aug = sa.FractalStretch(\n",
+    "    1.0,\n",
+    "    freq_min_chunk_size=4,\n",
+    "    freq_max_chunk_size=8,\n",
+    "    time_min_chunk_size=16,\n",
+    "    time_max_chunk_size=48,\n",
+    ")\n",
     "plt.matshow(aug(original) - original, cmap=\"Greys\")"
    ]
   },
@@ -1586,7 +1601,13 @@
     }
    ],
    "source": [
-    "aug = sa.FractalDropout(1.0, freq_min_chunk_size=1, freq_max_chunk_size=3, freq_max_chunk=1, time_max_chunk=1)\n",
+    "aug = sa.FractalDropout(\n",
+    "    1.0,\n",
+    "    freq_min_chunk_size=1,\n",
+    "    freq_max_chunk_size=3,\n",
+    "    freq_max_chunk=1,\n",
+    "    time_max_chunk=1,\n",
+    ")\n",
     "plt.matshow(aug(original) - original, cmap=\"Greys\")"
    ]
   },
