--- a/notebooks/fixmatch/audioset.ipynb
+++ b/notebooks/fixmatch/audioset.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.environ[\"MKL_NUM_THREADS\"] = \"2\"\n",
     "os.environ[\"NUMEXPR_NU M_THREADS\"] = \"2\"\n",
     "os.environ[\"OMP_NUM_THREADS\"] = \"2\"\n",
@@ -40,9 +41,22 @@
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from torch.utils.data import DataLoader\n",
     "from SSL.util.model_loader import load_model\n",
-    "from SSL.util.loaders import load_dataset, load_optimizer, load_callbacks, load_preprocesser\n",
+    "from SSL.util.loaders import (\n",
+    "    load_dataset,\n",
+    "    load_optimizer,\n",
+    "    load_callbacks,\n",
+    "    load_preprocesser,\n",
+    ")\n",
     "from SSL.util.checkpoint import CheckPoint, mSummaryWriter\n",
-    "from SSL.util.utils import reset_seed, get_datetime, track_maximum, DotDict, cache_to_disk, get_train_format, get_lr\n",
+    "from SSL.util.utils import (\n",
+    "    reset_seed,\n",
+    "    get_datetime,\n",
+    "    track_maximum,\n",
+    "    DotDict,\n",
+    "    cache_to_disk,\n",
+    "    get_train_format,\n",
+    "    get_lr,\n",
+    ")\n",
     "from SSL.util.mixup import MixUpBatchShuffle\n",
     "from SSL.loss import FixMatchLoss\n",
     "from SSL.ramps import Warmup, sigmoid_rampup\n",
@@ -70,16 +84,13 @@
     "        nb_cpu=10,\n",
     "        nb_gpu=2,\n",
     "    ),\n",
-    "    \n",
     "    dataset=DotDict(\n",
-    "        dataset='audioset-unbalanced',\n",
+    "        dataset=\"audioset-unbalanced\",\n",
     "        num_classes=527,\n",
     "    ),\n",
-    "    \n",
     "    model=DotDict(\n",
     "        model=\"MobileNetV2\",\n",
     "    ),\n",
-    "    \n",
     "    train_param=DotDict(\n",
     "        supervised_ratio=0.1,\n",
     "        batch_size=64,\n",
@@ -87,11 +98,9 @@
     "        learning_rate=0.003,\n",
     "        seed=1234,\n",
     "        resume=False,\n",
-    "        \n",
     "        train_folds=None,\n",
     "        val_folds=None,\n",
     "    ),\n",
-    "    \n",
     "    fixmatch=DotDict(\n",
     "        mask_threshold=0.75,\n",
     "        guess_threshold=0.5,\n",
@@ -99,14 +108,7 @@
     "        lambda_u=1.0,\n",
     "        warmup_length=50000,\n",
     "    ),\n",
-    "    \n",
-    "    mixup=DotDict(\n",
-    "        use=False,\n",
-    "        alpha=1.0,\n",
-    "        max=True,\n",
-    "        label=True\n",
-    "    ),\n",
-    "    \n",
+    "    mixup=DotDict(use=False, alpha=1.0, max=True, label=True),\n",
     "    specaugment=DotDict(\n",
     "        use=False,\n",
     "        time_drop_width=32,\n",
@@ -116,13 +118,17 @@
     "    ),\n",
     ")\n",
     "\n",
-    "cfg['path'] = DotDict(\n",
-    "    dataset_root='../../datasets',\n",
-    "    checkpoint_root='../../model_save',\n",
-    "    tensorboard_root='../../tensorboard',\n",
+    "cfg[\"path\"] = DotDict(\n",
+    "    dataset_root=\"../../datasets\",\n",
+    "    checkpoint_root=\"../../model_save\",\n",
+    "    tensorboard_root=\"../../tensorboard\",\n",
     ")\n",
-    "cfg.path['checkpoint_path']=f'{cfg.path.checkpoint_root}/{cfg.dataset.dataset}/fixmatch'\n",
-    "cfg.path['tensorboard_path']=f'{cfg.path.tensorboard_root}/{cfg.dataset.dataset}/fixmatch'"
+    "cfg.path[\n",
+    "    \"checkpoint_path\"\n",
+    "] = f\"{cfg.path.checkpoint_root}/{cfg.dataset.dataset}/fixmatch\"\n",
+    "cfg.path[\n",
+    "    \"tensorboard_path\"\n",
+    "] = f\"{cfg.path.tensorboard_root}/{cfg.dataset.dataset}/fixmatch\""
    ]
   },
   {
@@ -206,21 +212,17 @@
     "_, train_loader, val_loader = load_dataset(\n",
     "    cfg.dataset.dataset,\n",
     "    \"fixmatch\",\n",
-    "\n",
     "    dataset_root=cfg.path.dataset_root,\n",
     "    supervised_ratio=cfg.train_param.supervised_ratio,\n",
     "    batch_size=cfg.train_param.batch_size,\n",
     "    train_folds=cfg.train_param.train_folds,\n",
     "    val_folds=cfg.train_param.val_folds,\n",
-    "\n",
     "    train_transform=train_transform,\n",
     "    val_transform=val_transform,\n",
-    "\n",
     "    num_workers=cfg.hardware.nb_cpu,  # With the cache enable, it is faster to have only one worker\n",
     "    pin_memory=True,\n",
     "    seed=cfg.train_param.seed,\n",
-    "\n",
-    "    verbose=1\n",
+    "    verbose=1,\n",
     ")"
    ]
   },
@@ -481,34 +483,36 @@
    "source": [
     "# Prepare suffix\n",
     "# normale training parameters\n",
-    "sufix_title = ''\n",
-    "sufix_title += f'_{cfg.train_param.learning_rate}-lr'\n",
-    "sufix_title += f'_{cfg.train_param.supervised_ratio}-sr'\n",
-    "sufix_title += f'_{cfg.train_param.batch_size}-bs'\n",
-    "sufix_title += f'_{cfg.train_param.seed}-seed'\n",
+    "sufix_title = \"\"\n",
+    "sufix_title += f\"_{cfg.train_param.learning_rate}-lr\"\n",
+    "sufix_title += f\"_{cfg.train_param.supervised_ratio}-sr\"\n",
+    "sufix_title += f\"_{cfg.train_param.batch_size}-bs\"\n",
+    "sufix_title += f\"_{cfg.train_param.seed}-seed\"\n",
     "\n",
     "# fixmatch parameters\n",
-    "sufix_fm = f'_{cfg.fixmatch.mask_threshold}-mTh'\n",
-    "sufix_fm += f'_{cfg.fixmatch.guess_threshold}-gTh'\n",
-    "sufix_fm += f'_{cfg.fixmatch.lambda_s}-ls'\n",
-    "sufix_fm += f'_{cfg.fixmatch.lambda_u}-lu'\n",
+    "sufix_fm = f\"_{cfg.fixmatch.mask_threshold}-mTh\"\n",
+    "sufix_fm += f\"_{cfg.fixmatch.guess_threshold}-gTh\"\n",
+    "sufix_fm += f\"_{cfg.fixmatch.lambda_s}-ls\"\n",
+    "sufix_fm += f\"_{cfg.fixmatch.lambda_u}-lu\"\n",
     "\n",
     "# mixup parameters\n",
-    "sufix_mixup = ''\n",
+    "sufix_mixup = \"\"\n",
     "if cfg.mixup.use:\n",
-    "    sufix_mixup = '_mixup'\n",
-    "    if cfg.mixup.max: sufix_mixup += \"-max\"\n",
-    "    if cfg.mixup.label: sufix_mixup += \"-label\"\n",
+    "    sufix_mixup = \"_mixup\"\n",
+    "    if cfg.mixup.max:\n",
+    "        sufix_mixup += \"-max\"\n",
+    "    if cfg.mixup.label:\n",
+    "        sufix_mixup += \"-label\"\n",
     "    sufix_mixup += f\"-{cfg.mixup.alpha}-a\"\n",
     "\n",
     "# SpecAugment parameters\n",
-    "sufix_sa = ''\n",
+    "sufix_sa = \"\"\n",
     "if cfg.specaugment.use:\n",
-    "    sufix_sa = '_specAugment'\n",
-    "    sufix_sa += f'-{cfg.specaugment.time_drop_width}-tdw'\n",
-    "    sufix_sa += f'-{cfg.specaugment.time_stripe_num}-tsn'\n",
-    "    sufix_sa += f'-{cfg.specaugment.freq_drop_width}-fdw'\n",
-    "    sufix_sa += f'-{cfg.specaugment.freq_stripe_num}-fsn'"
+    "    sufix_sa = \"_specAugment\"\n",
+    "    sufix_sa += f\"-{cfg.specaugment.time_drop_width}-tdw\"\n",
+    "    sufix_sa += f\"-{cfg.specaugment.time_stripe_num}-tsn\"\n",
+    "    sufix_sa += f\"-{cfg.specaugment.freq_drop_width}-fdw\"\n",
+    "    sufix_sa += f\"-{cfg.specaugment.freq_stripe_num}-fsn\""
    ]
   },
   {
@@ -532,10 +536,16 @@
     }
    ],
    "source": [
-    "tensorboard_sufix = sufix_title + f'_{cfg.train_param.nb_iteration}-e' + sufix_fm + sufix_sa + f'__{cfg.path.sufix}'\n",
-    "tensorboard_title = f'{get_datetime()}_{cfg.model.model}_{tensorboard_sufix}'\n",
-    "log_dir = f'{cfg.path.tensorboard_path}/{cfg.model.model}/{tensorboard_title}'\n",
-    "print('Tensorboard log at: ', log_dir)\n",
+    "tensorboard_sufix = (\n",
+    "    sufix_title\n",
+    "    + f\"_{cfg.train_param.nb_iteration}-e\"\n",
+    "    + sufix_fm\n",
+    "    + sufix_sa\n",
+    "    + f\"__{cfg.path.sufix}\"\n",
+    ")\n",
+    "tensorboard_title = f\"{get_datetime()}_{cfg.model.model}_{tensorboard_sufix}\"\n",
+    "log_dir = f\"{cfg.path.tensorboard_path}/{cfg.model.model}/{tensorboard_title}\"\n",
+    "print(\"Tensorboard log at: \", log_dir)\n",
     "\n",
     "tensorboard = mSummaryWriter(log_dir=log_dir, comment=model_func.__name__)"
    ]
@@ -565,16 +575,26 @@
     }
    ],
    "source": [
-    "optimizer = load_optimizer(cfg.dataset.dataset, 'fixmatch', learning_rate=cfg.train_param.learning_rate, model=model)\n",
-    "callbacks = load_callbacks(cfg.dataset.dataset, 'fixmatch', optimizer=optimizer, nb_epoch=cfg.train_param.nb_iteration)\n",
+    "optimizer = load_optimizer(\n",
+    "    cfg.dataset.dataset,\n",
+    "    \"fixmatch\",\n",
+    "    learning_rate=cfg.train_param.learning_rate,\n",
+    "    model=model,\n",
+    ")\n",
+    "callbacks = load_callbacks(\n",
+    "    cfg.dataset.dataset,\n",
+    "    \"fixmatch\",\n",
+    "    optimizer=optimizer,\n",
+    "    nb_epoch=cfg.train_param.nb_iteration,\n",
+    ")\n",
     "loss_sup = nn.BCEWithLogitsLoss(reduction=\"sum\")\n",
     "loss_unsup = nn.BCEWithLogitsLoss(reduction=\"none\")\n",
     "\n",
     "lambda_u = Warmup(cfg.fixmatch.lambda_u, cfg.fixmatch.warmup_length, sigmoid_rampup)\n",
     "\n",
-    "checkpoint_sufix = sufix_title + sufix_mixup + sufix_sa + f'__{cfg.path.sufix}'\n",
-    "checkpoint_title = f'{cfg.model.model}_{checkpoint_sufix}'\n",
-    "checkpoint_path = f'{cfg.path.checkpoint_path}/{cfg.model.model}/{checkpoint_title}'\n",
+    "checkpoint_sufix = sufix_title + sufix_mixup + sufix_sa + f\"__{cfg.path.sufix}\"\n",
+    "checkpoint_title = f\"{cfg.model.model}_{checkpoint_sufix}\"\n",
+    "checkpoint_path = f\"{cfg.path.checkpoint_path}/{cfg.model.model}/{checkpoint_title}\"\n",
     "checkpoint = CheckPoint(model, optimizer, mode=\"max\", name=checkpoint_path)"
    ]
   },
@@ -615,7 +635,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "header, train_formater, val_formater = get_train_format('audioset-fixmatch')"
+    "header, train_formater, val_formater = get_train_format(\"audioset-fixmatch\")"
    ]
   },
   {
@@ -631,12 +651,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_augmenter = SpecAugment(time_drop_width=cfg.specaugment.time_drop_width,\n",
-    "                                  time_stripes_num=cfg.specaugment.sa_time_stripe_num,\n",
-    "                                  freq_drop_width=cfg.specaugment.freq_drop_width,\n",
-    "                                  freq_stripes_num=cfg.specaugment.req_stripe_num)\n",
+    "spec_augmenter = SpecAugment(\n",
+    "    time_drop_width=cfg.specaugment.time_drop_width,\n",
+    "    time_stripes_num=cfg.specaugment.sa_time_stripe_num,\n",
+    "    freq_drop_width=cfg.specaugment.freq_drop_width,\n",
+    "    freq_stripes_num=cfg.specaugment.req_stripe_num,\n",
+    ")\n",
     "\n",
-    "mixup_fn = MixUpBatchShuffle(alpha=cfg.mixup.alpha, apply_max=cfg.mixup.max, mix_labels=cfg.mixup.label)"
+    "mixup_fn = MixUpBatchShuffle(\n",
+    "    alpha=cfg.mixup.alpha, apply_max=cfg.mixup.max, mix_labels=cfg.mixup.label\n",
+    ")"
    ]
   },
   {
@@ -652,13 +676,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def guess_label(x_uw: Tensor) -> (Tensor, Tensor):    \n",
+    "def guess_label(x_uw: Tensor) -> (Tensor, Tensor):\n",
     "    logits_uw = model(x_uw)\n",
     "    pred_uw = activation(logits_uw)\n",
     "\n",
     "    nb_classes = cfg.dataset.num_classes\n",
     "    labels_u = (pred_uw > cfg.fixmatch.guess_threshold).float()\n",
-    "#     labels_u = F.one_hot(pred_uw, cfg.dataset.num_classes)\n",
+    "    #     labels_u = F.one_hot(pred_uw, cfg.dataset.num_classes)\n",
     "    return labels_u, pred_uw\n",
     "\n",
     "\n",
@@ -680,32 +704,32 @@
     "    # aliases\n",
     "    M = metrics\n",
     "    T = tensorboard.add_scalar\n",
-    "    \n",
+    "\n",
     "    model.train()\n",
-    "    \n",
+    "\n",
     "    x_sw, y_sw = Sw  # Supervised weak augmented\n",
     "    x_uw, y_uw = Uw  # Unsupervised weak augmented\n",
     "    x_us, y_us = Us  # Unsupervised strong augmented\n",
-    "    \n",
+    "\n",
     "    x_sw, y_sw = x_sw.cuda().float(), y_sw.cuda().float()\n",
     "    x_uw, y_uw = x_uw.cuda().float(), y_uw.cuda().float()\n",
     "    x_us, y_us = x_us.cuda().float(), y_us.cuda().float()\n",
-    "    \n",
+    "\n",
     "    # Apply mixup is needed\n",
     "    if cfg.mixup.use:\n",
     "        pass\n",
-    "    \n",
+    "\n",
     "    # Apply specaugment if needed\n",
     "    if cfg.specaugment.use:\n",
     "        pass\n",
-    "    \n",
+    "\n",
     "    # Use guess u label with prediction of weak augmentation of u\n",
     "    with torch.no_grad():\n",
     "        pseudo_y_uw, pred_uw = guess_label(x_uw)\n",
     "        mask = confidence_mask(pseudo_y_uw, cfg.fixmatch.mask_threshold, dim=1)\n",
     "\n",
     "    optimizer.zero_grad()\n",
-    "    \n",
+    "\n",
     "    # Compute predictions\n",
     "    logits_sw = model(x_sw)\n",
     "    logits_uw = model(x_uw)\n",
@@ -718,7 +742,7 @@
     "    loss_u = torch.sum(loss_u * mask)\n",
     "    loss = loss_s + lambda_u() * loss_u\n",
     "    loss.backward()\n",
-    "    \n",
+    "\n",
     "    optimizer.step()\n",
     "\n",
     "    # Compute metrics\n",
@@ -726,28 +750,40 @@
     "        fscore_s = M.fscore_s(torch.sigmoid(logits_sw), y_sw)\n",
     "        acc_s = M.acc_s(logits_sw, y_sw)\n",
     "        acc_u = M.acc_u(logits_uw, y_uw)\n",
-    "        fscore_uw = M.fscore_u(torch.sigmoid(logits_uw), pseudo_y_uw)  # Use true label for monitoring purpose\n",
+    "        fscore_uw = M.fscore_u(\n",
+    "            torch.sigmoid(logits_uw), pseudo_y_uw\n",
+    "        )  # Use true label for monitoring purpose\n",
     "        avg_ce = M.avg_fn(loss.item())\n",
-    "        \n",
+    "\n",
     "        # logs\n",
-    "        print(train_formater.format(\n",
-    "            \"Training: \",\n",
-    "            epoch + 1,\n",
-    "            e, cfg.train_param.nb_iteration,\n",
-    "            \"\", m_(avg_ce),\n",
-    "            \"\", m_(acc_s), m_(fscore_s), m_(acc_u), m_(fscore_uw), 0.0,\n",
-    "            time.time() - start_time,\n",
-    "        ), end=\"\\r\")\n",
-    "        \n",
-    "        T(\"train/loss\",   loss.item(), epoch)\n",
+    "        print(\n",
+    "            train_formater.format(\n",
+    "                \"Training: \",\n",
+    "                epoch + 1,\n",
+    "                e,\n",
+    "                cfg.train_param.nb_iteration,\n",
+    "                \"\",\n",
+    "                m_(avg_ce),\n",
+    "                \"\",\n",
+    "                m_(acc_s),\n",
+    "                m_(fscore_s),\n",
+    "                m_(acc_u),\n",
+    "                m_(fscore_uw),\n",
+    "                0.0,\n",
+    "                time.time() - start_time,\n",
+    "            ),\n",
+    "            end=\"\\r\",\n",
+    "        )\n",
+    "\n",
+    "        T(\"train/loss\", loss.item(), epoch)\n",
     "        T(\"train/loss_s\", loss_s.item(), epoch)\n",
     "        T(\"train/loss_u\", loss_u.item(), epoch)\n",
     "        T(\"train/labels_used\", mask.mean().item(), epoch)\n",
-    "        \n",
-    "        T('train/fscore_s', m_(fscore_s), epoch)\n",
-    "        T('train/fscore_uw', m_(fscore_uw), epoch)\n",
-    "        T('train/acc_s', m_(acc_s), epoch)\n",
-    "        T('train/acc_u', m_(acc_u), epoch)"
+    "\n",
+    "        T(\"train/fscore_s\", m_(fscore_s), epoch)\n",
+    "        T(\"train/fscore_uw\", m_(fscore_uw), epoch)\n",
+    "        T(\"train/acc_s\", m_(acc_s), epoch)\n",
+    "        T(\"train/acc_u\", m_(acc_u), epoch)"
    ]
   },
   {
@@ -764,9 +800,9 @@
     "\n",
     "    start_time = time.time()\n",
     "    print(\"\")\n",
-    "    \n",
+    "\n",
     "    model.eval()\n",
-    "    \n",
+    "\n",
     "    with torch.set_grad_enabled(False):\n",
     "        for i, (X, y) in enumerate(val_loader):\n",
     "            X = X.cuda().float()\n",
@@ -782,14 +818,24 @@
     "            avg_ce = M.avg_fn(loss.item())\n",
     "\n",
     "            # logs\n",
-    "            print(val_formater.format(\n",
-    "                \"Validation: \",\n",
-    "                epoch + 1,\n",
-    "                i, nb_batch,\n",
-    "                \"\", m_(avg_ce),\n",
-    "                \"\", m_(acc), m_(fscore), 0.0, 0.0, m_(mAP),\n",
-    "                time.time() - start_time\n",
-    "            ), end=\"\\r\")\n",
+    "            print(\n",
+    "                val_formater.format(\n",
+    "                    \"Validation: \",\n",
+    "                    epoch + 1,\n",
+    "                    i,\n",
+    "                    nb_batch,\n",
+    "                    \"\",\n",
+    "                    m_(avg_ce),\n",
+    "                    \"\",\n",
+    "                    m_(acc),\n",
+    "                    m_(fscore),\n",
+    "                    0.0,\n",
+    "                    0.0,\n",
+    "                    m_(mAP),\n",
+    "                    time.time() - start_time,\n",
+    "                ),\n",
+    "                end=\"\\r\",\n",
+    "            )\n",
     "\n",
     "    T(\"val/Lce\", m_(avg_ce), epoch)\n",
     "    T(\"val/f1\", m_(fscore), epoch)\n",
@@ -800,7 +846,7 @@
     "\n",
     "    T(\"max/acc\", maximum_tracker(\"acc\", m_(acc)), epoch)\n",
     "    T(\"max/f1\", maximum_tracker(\"f1\", m_(fscore)), epoch)\n",
-    "    T('max/mAP', maximum_tracker('mAP', m_(mAP)), epoch)\n",
+    "    T(\"max/mAP\", maximum_tracker(\"mAP\", m_(mAP)), epoch)\n",
     "\n",
     "    return avg_ce, fscore, mAP"
    ]
@@ -858,7 +904,7 @@
     "    # Validation every 500 iteration\n",
     "    if e % 500 == 0:\n",
     "        val_avg_ce, val_fscore, val_mAP = val(e)\n",
-    "        print('')\n",
+    "        print(\"\")\n",
     "        checkpoint.step(m_(val_mAP))\n",
     "        tensorboard.flush()\n",
     "\n",
@@ -880,28 +926,25 @@
    "outputs": [],
    "source": [
     "hparams = {\n",
-    "    'dataset': cfg.dataset.dataset,\n",
-    "    'model': cfg.model.model,\n",
-    "    'supervised_ratio': cfg.train_param.supervised_ratio,\n",
-    "    'batch_size': cfg.train_param.batch_size,\n",
-    "    'nb_iteration': cfg.train_param.nb_iteration,\n",
-    "    'learning_rate': cfg.train_param.learning_rate,\n",
-    "    'seed': cfg.train_param.seed,\n",
-    "    \n",
-    "    'threshold': cfg.fixmatch.threshold,\n",
-    "    'lambda_s': cfg.fixmatch.lambda_s,\n",
-    "    'lambda_u': cfg.fixmatch.lambda_u,\n",
-    "    \n",
-    "    'mixup': cfg.mixup.use,\n",
-    "    'mixup-alpha': cfg.mixup.alpha,\n",
-    "    'mixup-max': cfg.mixup.max,\n",
-    "    'mixup-label': cfg.mixup.label,\n",
-    "    \n",
-    "    'specaugment(sa)': cfg.specaugment.use,\n",
-    "    'sa_time_drop_width': cfg.specaugment.time_drop_width,\n",
-    "    'sa_time_stripe_num': cfg.specaugment.time_stripe_num,\n",
-    "    'sa_freq_drop_width': cfg.specaugment.freq_drop_width,\n",
-    "    'sa_freq_stripe_num': cfg.specaugment.freq_stripe_num,\n",
+    "    \"dataset\": cfg.dataset.dataset,\n",
+    "    \"model\": cfg.model.model,\n",
+    "    \"supervised_ratio\": cfg.train_param.supervised_ratio,\n",
+    "    \"batch_size\": cfg.train_param.batch_size,\n",
+    "    \"nb_iteration\": cfg.train_param.nb_iteration,\n",
+    "    \"learning_rate\": cfg.train_param.learning_rate,\n",
+    "    \"seed\": cfg.train_param.seed,\n",
+    "    \"threshold\": cfg.fixmatch.threshold,\n",
+    "    \"lambda_s\": cfg.fixmatch.lambda_s,\n",
+    "    \"lambda_u\": cfg.fixmatch.lambda_u,\n",
+    "    \"mixup\": cfg.mixup.use,\n",
+    "    \"mixup-alpha\": cfg.mixup.alpha,\n",
+    "    \"mixup-max\": cfg.mixup.max,\n",
+    "    \"mixup-label\": cfg.mixup.label,\n",
+    "    \"specaugment(sa)\": cfg.specaugment.use,\n",
+    "    \"sa_time_drop_width\": cfg.specaugment.time_drop_width,\n",
+    "    \"sa_time_stripe_num\": cfg.specaugment.time_stripe_num,\n",
+    "    \"sa_freq_drop_width\": cfg.specaugment.freq_drop_width,\n",
+    "    \"sa_freq_stripe_num\": cfg.specaugment.freq_stripe_num,\n",
     "}\n",
     "\n",
     "# convert all value to str\n",
