--- a/notebooks/infer_pvc.ipynb
+++ b/notebooks/infer_pvc.ipynb
@@ -51,9 +51,9 @@
     }
    ],
    "source": [
-    "root = '../model_save/ComParE2021-PRS/supervised/MobileNetV2'\n",
+    "root = \"../model_save/ComParE2021-PRS/supervised/MobileNetV2\"\n",
     "for f in os.listdir(root):\n",
-    "    if 'aug' in f:\n",
+    "    if \"aug\" in f:\n",
     "        print(os.path.join(root, f))"
    ]
   },
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_path = '../model_save/ComParE2021-PRS/supervised/MobileNetV2/MobileNetV2__0.001-lr_1.0-sr_64-bs_1234-seed_True-aug__.best'"
+    "selected_path = \"../model_save/ComParE2021-PRS/supervised/MobileNetV2/MobileNetV2__0.001-lr_1.0-sr_64-bs_1234-seed_True-aug__.best\""
    ]
   },
   {
@@ -80,10 +80,10 @@
    "outputs": [],
    "source": [
     "args = DotDict(\n",
-    "    dataset='ComParE2021-prs',\n",
-    "    method='supervised',\n",
-    "    model='MobileNetV2',  # Must be compatible with weight file\n",
-    "    nb_class=5\n",
+    "    dataset=\"ComParE2021-prs\",\n",
+    "    method=\"supervised\",\n",
+    "    model=\"MobileNetV2\",  # Must be compatible with weight file\n",
+    "    nb_class=5,\n",
     ")"
    ]
   },
@@ -94,13 +94,13 @@
    "outputs": [],
    "source": [
     "nb_class = {\n",
-    "    'ubs8k': 10,\n",
-    "    'esc10': 10,\n",
-    "    'esc50': 50,\n",
-    "    'speechcommand': 35,\n",
-    "    'compare2021-prs': 5,\n",
-    "    'audioset-unbalanced': 527,\n",
-    "    'audioset-balanced': 527,\n",
+    "    \"ubs8k\": 10,\n",
+    "    \"esc10\": 10,\n",
+    "    \"esc50\": 50,\n",
+    "    \"speechcommand\": 35,\n",
+    "    \"compare2021-prs\": 5,\n",
+    "    \"audioset-unbalanced\": 527,\n",
+    "    \"audioset-balanced\": 527,\n",
     "}"
    ]
   },
@@ -132,37 +132,33 @@
     }
    ],
    "source": [
-    "print('Loading preprocesser ...')\n",
+    "print(\"Loading preprocesser ...\")\n",
     "t_transform, v_transform = load_preprocesser(args.dataset, args.method)\n",
     "\n",
-    "print('Loading model ...')\n",
+    "print(\"Loading model ...\")\n",
     "model_func = load_model(args.dataset, args.model)\n",
     "model = model_func(num_classes=nb_class[args.dataset.lower()])\n",
     "\n",
-    "print('Loading weights ...')\n",
+    "print(\"Loading weights ...\")\n",
     "optimizer = load_optimizer(args.dataset, args.method, model=model, learning_rate=0.003)\n",
-    "checkpoint = CheckPoint(model, optimizer, mode=\"max\", name='./.tmp')\n",
+    "checkpoint = CheckPoint(model, optimizer, mode=\"max\", name=\"./.tmp\")\n",
     "checkpoint.load(selected_path)\n",
     "\n",
-    "print('Loading the dataset ...')\n",
+    "print(\"Loading the dataset ...\")\n",
     "_, train_loader, val_loader = load_dataset(\n",
-    "        args.dataset,\n",
-    "        \"supervised\",\n",
-    "\n",
-    "        dataset_root='../datasets',\n",
-    "        supervised_ratio=1.0,\n",
-    "        batch_size=32,\n",
-    "        train_folds=None,\n",
-    "        val_folds=None,\n",
-    "\n",
-    "        train_transform=t_transform,\n",
-    "        val_transform=v_transform,\n",
-    "\n",
-    "        num_workers=4,  # With the cache enable, it is faster to have only one worker\n",
-    "        pin_memory=False,\n",
-    "\n",
-    "        verbose=1\n",
-    "    )"
+    "    args.dataset,\n",
+    "    \"supervised\",\n",
+    "    dataset_root=\"../datasets\",\n",
+    "    supervised_ratio=1.0,\n",
+    "    batch_size=32,\n",
+    "    train_folds=None,\n",
+    "    val_folds=None,\n",
+    "    train_transform=t_transform,\n",
+    "    val_transform=v_transform,\n",
+    "    num_workers=4,  # With the cache enable, it is faster to have only one worker\n",
+    "    pin_memory=False,\n",
+    "    verbose=1,\n",
+    ")"
    ]
   },
   {
@@ -233,7 +229,7 @@
     "        a_y.append(y)\n",
     "\n",
     "        # logs\n",
-    "        print(f'{i} / {nb_batch}', end='\\r')"
+    "        print(f\"{i} / {nb_batch}\", end=\"\\r\")"
    ]
   },
   {
@@ -263,9 +259,9 @@
     "from mlu.metrics import Metric, CategoricalAccuracy, UAR, AveragePrecision\n",
     "\n",
     "metrics = DotDict(\n",
-    "    acc = CategoricalAccuracy(),\n",
-    "    mAP = AveragePrecision(),\n",
-    "    uar = UAR(),\n",
+    "    acc=CategoricalAccuracy(),\n",
+    "    mAP=AveragePrecision(),\n",
+    "    uar=UAR(),\n",
     ")"
    ]
   },
@@ -296,9 +292,9 @@
     }
    ],
    "source": [
-    "print('acc: ', metrics.acc(A(a_logits_), a_y_))\n",
-    "print('mAP: ', metrics.mAP(A(a_logits_), a_y_))\n",
-    "print('UAR: ', metrics.uar(A(a_logits_), a_y_))"
+    "print(\"acc: \", metrics.acc(A(a_logits_), a_y_))\n",
+    "print(\"mAP: \", metrics.mAP(A(a_logits_), a_y_))\n",
+    "print(\"UAR: \", metrics.uar(A(a_logits_), a_y_))"
    ]
   },
   {
