--- a/notebooks/tensorboard_UI_v2.ipynb
+++ b/notebooks/tensorboard_UI_v2.ipynb
@@ -67,6 +67,7 @@
    ],
    "source": [
     "import sys\n",
+    "\n",
     "sys.executable"
    ]
   },
@@ -120,7 +121,7 @@
     "            if value.HasField(\"simple_value\"):\n",
     "                if value.tag not in tag_list:\n",
     "                    tag_list.append(value.tag)\n",
-    "    \n",
+    "\n",
     "    return tag_list"
    ]
   },
@@ -151,13 +152,13 @@
     "    if path:\n",
     "        if os.path.isfile(path[0]):\n",
     "            return True\n",
-    "        \n",
+    "\n",
     "        if os.path.isdir(path[0]):\n",
-    "            if not os.listdir(path[0]): # directory is empty\n",
+    "            if not os.listdir(path[0]):  # directory is empty\n",
     "                return False\n",
-    "            \n",
+    "\n",
     "            sublist = [os.path.join(path[0], p) for p in os.listdir(path[0])]\n",
-    "            \n",
+    "\n",
     "            if sublist:\n",
     "                if os.path.isfile(sublist[0]):\n",
     "                    return True\n",
@@ -174,7 +175,7 @@
    "source": [
     "def get_tag_list(log_file):\n",
     "    list_file = os.listdir(log_file)\n",
-    "    \n",
+    "\n",
     "    print(log_file)\n",
     "    print(list_file)\n",
     "    path = os.path.join(log_file, list_file[0])\n",
@@ -198,12 +199,14 @@
    "source": [
     "def ui_dropdown_dir(directory):\n",
     "    global log_list\n",
-    "    \n",
-    "    sub_directories = sorted([os.path.join(directory, p) for p in os.listdir(directory) ])\n",
-    "        \n",
+    "\n",
+    "    sub_directories = sorted(\n",
+    "        [os.path.join(directory, p) for p in os.listdir(directory)]\n",
+    "    )\n",
+    "\n",
     "    if not contain_log(sub_directories):\n",
     "        interact(ui_dropdown_dir, directory=sub_directories)\n",
-    "        \n",
+    "\n",
     "    else:\n",
     "        path_list = [os.path.join(directory, l) for l in os.listdir(directory)]\n",
     "        log_list = path_list\n",
@@ -216,11 +219,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stat_stat(stat = \"maxi\"):\n",
+    "def stat_stat(stat=\"maxi\"):\n",
     "    global file_stats\n",
-    "    \n",
+    "\n",
     "    values = [file_stats[l][stat] for l in file_stats.keys()]\n",
-    "    \n",
+    "\n",
     "    print(\"stat stat\")\n",
     "    print(\"mean: \", np.nanmean(values))\n",
     "    print(\"std : \", np.nanstd(values))\n",
@@ -261,16 +264,18 @@
    "source": [
     "def ui_dropdown_dir(directory, filters: str = \"\"):\n",
     "    global log_list\n",
-    "    \n",
-    "    sub_directories = sorted([os.path.join(directory, p) for p in os.listdir(directory) if \"ipynb\" not in p])\n",
-    "        \n",
+    "\n",
+    "    sub_directories = sorted(\n",
+    "        [os.path.join(directory, p) for p in os.listdir(directory) if \"ipynb\" not in p]\n",
+    "    )\n",
+    "\n",
     "    if not contain_log(sub_directories):\n",
     "        print(\"next\")\n",
     "        ui = interact(ui_dropdown_dir, directory=sub_directories, filters=\"\")\n",
-    "        \n",
+    "\n",
     "    else:\n",
     "        valid_list, path_list = [], []\n",
-    "        \n",
+    "\n",
     "        # prepare filters\n",
     "        if filters == \"\":\n",
     "            filters = [\"\"]\n",
@@ -282,7 +287,7 @@
     "            avoid_filters = [f[1:] for f in filters if f[0] == \"~\"]\n",
     "        if not need_filters:\n",
     "            need_filters = [\"\"]\n",
-    "            \n",
+    "\n",
     "        print(\"need filters: \", need_filters)\n",
     "        print(\"avoid filters: \", avoid_filters)\n",
     "        # need filters\n",
@@ -291,22 +296,22 @@
     "            for f in need_filters:\n",
     "                if f in l:\n",
     "                    valid += 1\n",
-    "                    \n",
+    "\n",
     "            if valid == len(need_filters):\n",
     "                valid_list.append(l)\n",
-    "                    \n",
+    "\n",
     "        # avoid filters\n",
     "        for l in valid_list:\n",
     "            valid = True\n",
-    "            \n",
+    "\n",
     "            for f in avoid_filters:\n",
     "                if f in l:\n",
     "                    valid = False\n",
     "                    break\n",
-    "                    \n",
+    "\n",
     "            if valid:\n",
     "                path_list.append(os.path.join(directory, l))\n",
-    "            \n",
+    "\n",
     "        print(\"valid list: \", valid_list[:2])\n",
     "        print(\"path list: \", path_list[:2])\n",
     "        # path_list = [os.path.join(directory, l) for l in os.listdir(directory) if filters in l]\n",
@@ -320,11 +325,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stat_stat(stat = \"maxi\"):\n",
+    "def stat_stat(stat=\"maxi\"):\n",
     "    global file_stats\n",
-    "    \n",
+    "\n",
     "    values = [file_stats[l][stat] for l in file_stats.keys()]\n",
-    "    \n",
+    "\n",
     "    print(\"stat stat\")\n",
     "    print(\"mean: \", np.nanmean(values))\n",
     "    print(\"std : \", np.nanstd(values))\n",
@@ -343,20 +348,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_logs(stat = \"maxi\", format_fn = None):\n",
+    "def format_logs(stat=\"maxi\", format_fn=None):\n",
     "    global file_stats\n",
-    "    \n",
+    "\n",
     "    msg = \"\"\n",
     "    for k, d in file_stats.items():\n",
     "        formated_name = k\n",
-    "        \n",
+    "\n",
     "        if format_fn is not None:\n",
     "            formated_name = format_fn(k)\n",
-    "            \n",
+    "\n",
     "        msg += \"%s %.6f\\n\" % (formated_name, d[stat])\n",
-    "    return msg.replace(\".\", \",\")\n",
-    "            \n",
-    "    "
+    "    return msg.replace(\".\", \",\")"
    ]
   },
   {
@@ -379,9 +382,9 @@
    "source": [
     "def statistics(mean=True, std=True, max=False, min=False, tag=tag_list[0]):\n",
     "    global file_stats\n",
-    "    \n",
+    "\n",
     "    file_log = dict()\n",
-    "    \n",
+    "\n",
     "    # read all the log files ------------------------------\n",
     "    @functools.lru_cache()\n",
     "    def get_log_data(path):\n",
@@ -393,28 +396,28 @@
     "                    if value.tag not in logs:\n",
     "                        logs[value.tag] = []\n",
     "                    logs[value.tag].append(value.simple_value)\n",
-    "    \n",
+    "\n",
     "        return logs\n",
-    "    \n",
+    "\n",
     "    for l in log_list:\n",
     "        final_path = os.path.join(l, os.listdir(l)[0])\n",
     "        logs = get_log_data(final_path)\n",
-    "        \n",
+    "\n",
     "        if logs:\n",
     "            file_log[l] = logs\n",
-    "        \n",
+    "\n",
     "    # compute the statistics ------------------------------\n",
     "    # ---- file wise ----\n",
     "    file_stats = dict()\n",
-    "    \n",
+    "\n",
     "    for l in file_log.keys():\n",
     "        file_stats[l] = dict(\n",
-    "            mean = np.nanmean(file_log[l][tag]),\n",
-    "            std = np.nanstd(file_log[l][tag]),\n",
-    "            mini = np.nanmin(file_log[l][tag]),\n",
-    "            maxi = np.nanmax(file_log[l][tag]),\n",
+    "            mean=np.nanmean(file_log[l][tag]),\n",
+    "            std=np.nanstd(file_log[l][tag]),\n",
+    "            mini=np.nanmin(file_log[l][tag]),\n",
+    "            maxi=np.nanmax(file_log[l][tag]),\n",
     "        )\n",
-    "        \n",
+    "\n",
     "    interact(stat_stat, stat=stat_list)"
    ]
   },
@@ -575,8 +578,8 @@
     "def format_fn(n):\n",
     "    print(n)\n",
     "    base = n.split(\"/\")[5].split(\"_\")\n",
-    "#     print(base)\n",
-    "    \n",
+    "    #     print(base)\n",
+    "\n",
     "    model_name = base[2]\n",
     "    ratio = base[3]\n",
     "    epoch = base[4][:-1]\n",
@@ -586,10 +589,20 @@
     "    nb_cycle = base[8][:-5]\n",
     "    nb_beta = base[9][:-4]\n",
     "    plsup_mini = base[10][:-1]\n",
-    "    \n",
-    "#     formated = \"%s %s %s %s %s\" % (model_name, lr, rule, nb_steps, epoch)\n",
-    "    formated = \"%s %s %s %s %s %s %s %s\" % (model_name, lr, rule, nb_steps, nb_cycle, nb_beta, plsup_mini, epoch)\n",
+    "\n",
+    "    #     formated = \"%s %s %s %s %s\" % (model_name, lr, rule, nb_steps, epoch)\n",
+    "    formated = \"%s %s %s %s %s %s %s %s\" % (\n",
+    "        model_name,\n",
+    "        lr,\n",
+    "        rule,\n",
+    "        nb_steps,\n",
+    "        nb_cycle,\n",
+    "        nb_beta,\n",
+    "        plsup_mini,\n",
+    "        epoch,\n",
+    "    )\n",
     "    return formated\n",
+    "\n",
     "\n",
     "detail = format_logs(\"maxi\", format_fn).split(\"\\n\")\n",
     "detail = sorted(detail, key=lambda x: x.split(\" \")[0])\n",
@@ -604,13 +617,13 @@
    "source": [
     "def contain_log(path):\n",
     "    if path:\n",
-    "        \n",
+    "\n",
     "        if os.path.isfile(path[0]):\n",
     "            return True\n",
-    "        \n",
+    "\n",
     "        if os.path.isdir(path[0]):\n",
     "            sublist = [os.path.join(path[0], p) for p in os.listdir(path[0])]\n",
-    "            \n",
+    "\n",
     "            if sublist:\n",
     "                if os.path.isfile(sublist[0]):\n",
     "                    return True\n",
@@ -630,7 +643,7 @@
     "\n",
     "for name in list_dir:\n",
     "    path = os.path.join(root, name)\n",
-    "    \n",
+    "\n",
     "    print(contain_log(path))"
    ]
   },
