--- a/notebooks/copound_scaling.ipynb
+++ b/notebooks/copound_scaling.ipynb
@@ -28,6 +28,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.environ[\"MKL_NUM_THREADS\"] = \"2\"\n",
     "os.environ[\"NUMEXPR_NU M_THREADS\"] = \"2\"\n",
     "os.environ[\"OMP_NUM_THREADS\"] = \"2\"\n",
@@ -53,6 +54,7 @@
     "\n",
     "\n",
     "import sys\n",
+    "\n",
     "sys.path.append(\"../..\")\n",
     "\n",
     "from DCT.util.utils import reset_seed, get_datetime, get_model_from_name\n",
@@ -88,11 +90,14 @@
    "outputs": [],
    "source": [
     "import argparse\n",
+    "\n",
     "parser = argparse.ArgumentParser()\n",
     "# dataset related parameters\n",
     "parser.add_argument(\"-d\", \"--dataset_root\", default=\"../datasets/ubs8k\", type=str)\n",
     "parser.add_argument(\"--supervised_ratio\", default=1.0, type=float)\n",
-    "parser.add_argument(\"-t\", \"--train_folds\", nargs=\"+\", default=[1, 2, 3, 4, 5, 6, 7, 8, 9], type=int)\n",
+    "parser.add_argument(\n",
+    "    \"-t\", \"--train_folds\", nargs=\"+\", default=[1, 2, 3, 4, 5, 6, 7, 8, 9], type=int\n",
+    ")\n",
     "parser.add_argument(\"-v\", \"--val_folds\", nargs=\"+\", default=[10], type=int)\n",
     "\n",
     "# learning parameters\n",
@@ -108,9 +113,13 @@
     "parser.add_argument(\"-p\", \"--phi\", default=1.0, type=float)\n",
     "\n",
     "# extra utility parameters\n",
-    "parser.add_argument(\"--checkpoint_path\", default=\"../model_save/ubs8k/full_supervised_test\", type=str)\n",
+    "parser.add_argument(\n",
+    "    \"--checkpoint_path\", default=\"../model_save/ubs8k/full_supervised_test\", type=str\n",
+    ")\n",
     "parser.add_argument(\"--resume\", action=\"store_true\", default=False)\n",
-    "parser.add_argument(\"--tensorboard_path\", default=\"../tensorboard/ubs8k/full_supervised_test\", type=str)\n",
+    "parser.add_argument(\n",
+    "    \"--tensorboard_path\", default=\"../tensorboard/ubs8k/full_supervised_test\", type=str\n",
+    ")\n",
     "parser.add_argument(\"--tensorboard_sufix\", default=\"\", type=str)\n",
     "\n",
     "args = parser.parse_args(\"\")"
@@ -141,7 +150,7 @@
    },
    "outputs": [],
    "source": [
-    "reset_seed(1234)\n"
+    "reset_seed(1234)"
    ]
   },
   {
@@ -157,9 +166,9 @@
     "for a in scales:\n",
     "    for b in scales:\n",
     "        for c in scales:\n",
-    "            v = a * b**2 * c**2\n",
-    "            \n",
-    "            if v-tolerance < 2 < v+tolerance:\n",
+    "            v = a * b ** 2 * c ** 2\n",
+    "\n",
+    "            if v - tolerance < 2 < v + tolerance:\n",
     "                valid_scales.append((a, b, c))"
    ]
   },
@@ -240,8 +249,8 @@
    "source": [
     "print(\"scales=(\")\n",
     "for (a, b, g) in valid_scales:\n",
-    "    print(\"\\t\\\"-a %f -b %f -g %f\\\" \\\\\" % (a, b, g))\n",
-    "print(\")\")    "
+    "    print('\\t\"-a %f -b %f -g %f\" \\\\' % (a, b, g))\n",
+    "print(\")\")"
    ]
   },
   {
@@ -295,11 +304,7 @@
     "metadata_root = os.path.join(args.dataset_root, \"metadata\")\n",
     "all_folds = args.train_folds + args.val_folds\n",
     "\n",
-    "manager = DatasetManager(\n",
-    "    metadata_root, audio_root,\n",
-    "    folds=all_folds,\n",
-    "    verbose=2\n",
-    ")"
+    "manager = DatasetManager(metadata_root, audio_root, folds=all_folds, verbose=2)"
    ]
   },
   {
@@ -2191,22 +2196,29 @@
     "from torchsummaryX import summary\n",
     "\n",
     "common_parameters = dict(\n",
-    "    manager = manager,\n",
+    "    manager=manager,\n",
     "    phi=2.2,\n",
     "    initial_conv_inputs=[1, 24, 48, 48],\n",
     "    initial_conv_outputs=[24, 48, 48, 48],\n",
-    "    initial_linear_inputs=[720, ],\n",
-    "    initial_linear_outputs=[10, ],\n",
+    "    initial_linear_inputs=[\n",
+    "        720,\n",
+    "    ],\n",
+    "    initial_linear_outputs=[\n",
+    "        10,\n",
+    "    ],\n",
     "    initial_resolution=[64, 173],\n",
-    "    round_up = False,\n",
+    "    round_up=False,\n",
     ")\n",
     "\n",
     "for (a, b, g) in valid_scales:\n",
-    "    model = ScalableCnn(compound_scales=(1.3571428571428572, 1.2142857142857142, 1.0), **common_parameters)\n",
-    "    \n",
+    "    model = ScalableCnn(\n",
+    "        compound_scales=(1.3571428571428572, 1.2142857142857142, 1.0),\n",
+    "        **common_parameters\n",
+    "    )\n",
+    "\n",
     "    new_res = model.scaled_resolution\n",
     "    input_tensor = torch.zeros((1, new_res[0], new_res[1]), dtype=torch.float)\n",
-    "    \n",
+    "\n",
     "    s = summary(model, input_tensor)"
    ]
   },
@@ -2299,8 +2311,12 @@
     "s_idx, u_idx = train_dataset.split_s_u(args.supervised_ratio)\n",
     "S_sampler = torch.utils.data.SubsetRandomSampler(s_idx)\n",
     "\n",
-    "training_loader = torch.utils.data.DataLoader(train_dataset, batch_size=args.batch_size, sampler=S_sampler)\n",
-    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=args.batch_size, shuffle=True)"
+    "training_loader = torch.utils.data.DataLoader(\n",
+    "    train_dataset, batch_size=args.batch_size, sampler=S_sampler\n",
+    ")\n",
+    "val_loader = torch.utils.data.DataLoader(\n",
+    "    val_dataset, batch_size=args.batch_size, shuffle=True\n",
+    ")"
    ]
   },
   {
@@ -2329,9 +2345,17 @@
    "outputs": [],
    "source": [
     "# tensorboard\n",
-    "tensorboard_title = \"%s_%s_%.1fS_%s\" % (get_datetime(), model_func.__name__, args.supervised_ratio, args.tensorboard_sufix)\n",
+    "tensorboard_title = \"%s_%s_%.1fS_%s\" % (\n",
+    "    get_datetime(),\n",
+    "    model_func.__name__,\n",
+    "    args.supervised_ratio,\n",
+    "    args.tensorboard_sufix,\n",
+    ")\n",
     "checkpoint_title = \"%s_%.1fS\" % (model_func.__name__, args.supervised_ratio)\n",
-    "tensorboard = SummaryWriter(log_dir=\"%s/%s\" % (args.tensorboard_path, tensorboard_title), comment=model_func.__name__)\n",
+    "tensorboard = SummaryWriter(\n",
+    "    log_dir=\"%s/%s\" % (args.tensorboard_path, tensorboard_title),\n",
+    "    comment=model_func.__name__,\n",
+    ")\n",
     "\n",
     "# losses\n",
     "loss_ce = nn.CrossEntropyLoss(reduction=\"mean\")\n",
@@ -2340,22 +2364,28 @@
     "optimizer = torch.optim.Adam(model.parameters(), lr=args.learning_rate)\n",
     "\n",
     "# callbacks\n",
-    "lr_lambda = lambda epoch: (1.0 + numpy.cos((epoch-1)*numpy.pi/args.nb_epoch))\n",
+    "lr_lambda = lambda epoch: (1.0 + numpy.cos((epoch - 1) * numpy.pi / args.nb_epoch))\n",
     "lr_scheduler = LambdaLR(optimizer, lr_lambda)\n",
     "\n",
     "# Checkpoint\n",
-    "checkpoint = CheckPoint(model, optimizer, mode=\"max\", name=\"%s/%s.torch\" % (args.checkpoint_path, checkpoint_title))\n",
+    "checkpoint = CheckPoint(\n",
+    "    model,\n",
+    "    optimizer,\n",
+    "    mode=\"max\",\n",
+    "    name=\"%s/%s.torch\" % (args.checkpoint_path, checkpoint_title),\n",
+    ")\n",
     "\n",
     "# Metrics\n",
     "fscore_fn = FScore()\n",
     "acc_fn = CategoricalAccuracy()\n",
     "avg = ContinueAverage()\n",
     "\n",
-    "reset_metrics = lambda : [m.reset() for m in [fscore_fn, acc_fn, avg]]\n",
+    "reset_metrics = lambda: [m.reset() for m in [fscore_fn, acc_fn, avg]]\n",
+    "\n",
     "\n",
     "def get_lr(optimizer):\n",
     "    for param_group in optimizer.param_groups:\n",
-    "        return param_group['lr']"
+    "        return param_group[\"lr\"]"
    ]
   },
   {
@@ -2419,11 +2449,15 @@
     "UNDERLINE_SEQ = \"\\033[1;4m\"\n",
     "RESET_SEQ = \"\\033[0m\"\n",
     "\n",
-    "header_form = \"{:<8.8} {:<6.6} - {:<6.6} - {:<8.8} {:<6.6} - {:<9.9} {:<12.12}| {:<9.9}- {:<6.6}\"\n",
-    "value_form  = \"{:<8.8} {:<6} - {:<6} - {:<8.8} {:<6.4f} - {:<9.9} {:<10.4f}| {:<9.4f}- {:<6.4f}\"\n",
+    "header_form = (\n",
+    "    \"{:<8.8} {:<6.6} - {:<6.6} - {:<8.8} {:<6.6} - {:<9.9} {:<12.12}| {:<9.9}- {:<6.6}\"\n",
+    ")\n",
+    "value_form = (\n",
+    "    \"{:<8.8} {:<6} - {:<6} - {:<8.8} {:<6.4f} - {:<9.9} {:<10.4f}| {:<9.4f}- {:<6.4f}\"\n",
+    ")\n",
     "\n",
     "header = header_form.format(\n",
-    "    \"\", \"Epoch\", \"%\", \"Losses:\", \"ce\", \"metrics: \", \"acc\", \"F1 \",\"Time\"\n",
+    "    \"\", \"Epoch\", \"%\", \"Losses:\", \"ce\", \"metrics: \", \"acc\", \"F1 \", \"Time\"\n",
     ")\n",
     "\n",
     "train_form = value_form\n",
@@ -2457,6 +2491,8 @@
     "\n",
     "    func.max = dict()\n",
     "    return func\n",
+    "\n",
+    "\n",
     "maximum_fn = maximum()"
    ]
   },
@@ -2494,14 +2530,20 @@
     "            avg_ce = avg(loss.item()).mean\n",
     "\n",
     "            # logs\n",
-    "            print(train_form.format(\n",
-    "                \"Training: \",\n",
-    "                epoch + 1,\n",
-    "                int(100 * (i + 1) / len(training_loader)),\n",
-    "                \"\", avg_ce,\n",
-    "                \"\", acc, fscore,\n",
-    "                time.time() - start_time\n",
-    "            ), end=\"\\r\")\n",
+    "            print(\n",
+    "                train_form.format(\n",
+    "                    \"Training: \",\n",
+    "                    epoch + 1,\n",
+    "                    int(100 * (i + 1) / len(training_loader)),\n",
+    "                    \"\",\n",
+    "                    avg_ce,\n",
+    "                    \"\",\n",
+    "                    acc,\n",
+    "                    fscore,\n",
+    "                    time.time() - start_time,\n",
+    "                ),\n",
+    "                end=\"\\r\",\n",
+    "            )\n",
     "\n",
     "    tensorboard.add_scalar(\"train/Lce\", avg_ce, epoch)\n",
     "    tensorboard.add_scalar(\"train/f1\", fscore, epoch)\n",
@@ -2545,21 +2587,27 @@
     "            avg_ce = avg(loss.item()).mean\n",
     "\n",
     "            # logs\n",
-    "            print(val_form.format(\n",
-    "                \"Validation: \",\n",
-    "                epoch + 1,\n",
-    "                int(100 * (i + 1) / len(val_loader)),\n",
-    "                \"\", avg_ce,\n",
-    "                \"\", acc, fscore,\n",
-    "                time.time() - start_time\n",
-    "            ), end=\"\\r\")\n",
+    "            print(\n",
+    "                val_form.format(\n",
+    "                    \"Validation: \",\n",
+    "                    epoch + 1,\n",
+    "                    int(100 * (i + 1) / len(val_loader)),\n",
+    "                    \"\",\n",
+    "                    avg_ce,\n",
+    "                    \"\",\n",
+    "                    acc,\n",
+    "                    fscore,\n",
+    "                    time.time() - start_time,\n",
+    "                ),\n",
+    "                end=\"\\r\",\n",
+    "            )\n",
     "\n",
     "    tensorboard.add_scalar(\"val/Lce\", avg_ce, epoch)\n",
     "    tensorboard.add_scalar(\"val/f1\", fscore, epoch)\n",
     "    tensorboard.add_scalar(\"val/acc\", acc, epoch)\n",
     "\n",
-    "    tensorboard.add_scalar(\"max/f1\", maximum_fn(\"fscore\", fscore), epoch )\n",
-    "    tensorboard.add_scalar(\"max/acc\", maximum_fn(\"acc\", acc), epoch )\n",
+    "    tensorboard.add_scalar(\"max/f1\", maximum_fn(\"fscore\", fscore), epoch)\n",
+    "    tensorboard.add_scalar(\"max/acc\", maximum_fn(\"acc\", acc), epoch)\n",
     "\n",
     "    tensorboard.add_scalar(\"hyperparameters/learning_rate\", get_lr(optimizer), epoch)\n",
     "\n",
