--- a/notebooks/deep-co-training/co-training_mixup_bce.ipynb
+++ b/notebooks/deep-co-training/co-training_mixup_bce.ipynb
@@ -43,6 +43,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.environ[\"MKL_NUM_THREADS\"] = \"2\"\n",
     "os.environ[\"NUMEXPR_NU M_THREADS\"] = \"2\"\n",
     "os.environ[\"OMP_NUM_THREADS\"] = \"2\"\n",
@@ -57,6 +58,7 @@
     "from torch.nn.parallel import DataParallel\n",
     "import torchvision.transforms as transforms\n",
     "from torch.optim.lr_scheduler import LambdaLR\n",
+    "\n",
     "# from torch.utils.tensorboard import SummaryWriter\n",
     "from advertorch.attacks import GradientSignAttack"
    ]
@@ -80,7 +82,12 @@
     "from SSL.util.checkpoint import CheckPoint, mSummaryWriter\n",
     "from SSL.util.utils import reset_seed, get_datetime, ZipCycle, track_maximum\n",
     "from SSL.util.model_loader import load_model\n",
-    "from SSL.util.loaders import load_dataset, load_optimizer, load_callbacks, load_preprocesser\n",
+    "from SSL.util.loaders import (\n",
+    "    load_dataset,\n",
+    "    load_optimizer,\n",
+    "    load_callbacks,\n",
+    "    load_preprocesser,\n",
+    ")\n",
     "from SSL.util.mixup import MixUpBatchShuffle\n",
     "\n",
     "from SSL.ramps import Warmup, sigmoid_rampup\n",
@@ -112,6 +119,7 @@
    "outputs": [],
    "source": [
     "import argparse\n",
+    "\n",
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument(\"--from_config\", default=\"\", type=str)\n",
     "parser.add_argument(\"-d\", \"--dataset_root\", default=\"../../datasets/\", type=str)\n",
@@ -131,10 +139,12 @@
     "group_m.add_argument(\"--num_classes\", default=10, type=int)\n",
     "\n",
     "group_u = parser.add_argument_group(\"ESC and UBS8K parameters\")\n",
-    "group_u.add_argument(\"-t\", \"--train_folds\", nargs=\"+\", default=[1, 2, 3, 4, 5, 6, 7, 8, 9], type=int)\n",
+    "group_u.add_argument(\n",
+    "    \"-t\", \"--train_folds\", nargs=\"+\", default=[1, 2, 3, 4, 5, 6, 7, 8, 9], type=int\n",
+    ")\n",
     "group_u.add_argument(\"-v\", \"--val_folds\", nargs=\"+\", default=[10], type=int)\n",
     "\n",
-    "group_h = parser.add_argument_group('hyperparameters')\n",
+    "group_h = parser.add_argument_group(\"hyperparameters\")\n",
     "group_h.add_argument(\"--lambda_cot_max\", default=1, type=float)\n",
     "group_h.add_argument(\"--lambda_diff_max\", default=0.5, type=float)\n",
     "group_h.add_argument(\"--warmup_length\", default=160, type=int)\n",
@@ -155,7 +165,9 @@
     "\n",
     "args = parser.parse_args(\"\")\n",
     "\n",
-    "tensorboard_path = os.path.join(args.tensorboard_root, args.dataset, args.tensorboard_path)\n",
+    "tensorboard_path = os.path.join(\n",
+    "    args.tensorboard_root, args.dataset, args.tensorboard_path\n",
+    ")\n",
     "checkpoint_path = os.path.join(args.checkpoint_root, args.dataset, args.checkpoint_path)"
    ]
   },
@@ -254,20 +266,16 @@
     "manager, train_loader, val_loader = load_dataset(\n",
     "    args.dataset,\n",
     "    \"dct\",\n",
-    "    \n",
-    "    dataset_root = args.dataset_root,\n",
-    "    supervised_ratio = args.supervised_ratio,\n",
-    "    batch_size = args.batch_size,\n",
-    "    train_folds = args.train_folds,\n",
-    "    val_folds = args.val_folds,\n",
-    "\n",
+    "    dataset_root=args.dataset_root,\n",
+    "    supervised_ratio=args.supervised_ratio,\n",
+    "    batch_size=args.batch_size,\n",
+    "    train_folds=args.train_folds,\n",
+    "    val_folds=args.val_folds,\n",
     "    train_transform=train_transform,\n",
     "    val_transform=val_transform,\n",
-    "    \n",
     "    num_workers=2,\n",
     "    pin_memory=True,\n",
-    "\n",
-    "    verbose = 2\n",
+    "    verbose=2,\n",
     ")"
    ]
   },
@@ -459,7 +467,7 @@
    "source": [
     "from torchsummary import summary\n",
     "\n",
-    "s = summary(m1, tuple(input_shape))\n"
+    "s = summary(m1, tuple(input_shape))"
    ]
   },
   {
@@ -481,28 +489,32 @@
    },
    "outputs": [],
    "source": [
-    "tensorboard_root=f\"{args.model}/{args.supervised_ratio}/{get_datetime()}_{model_func.__name__}\"\n",
+    "tensorboard_root = (\n",
+    "    f\"{args.model}/{args.supervised_ratio}/{get_datetime()}_{model_func.__name__}\"\n",
+    ")\n",
     "checkpoint_root = f\"{args.model}/{args.supervised_ratio}/{model_func.__name__}\"\n",
     "\n",
     "# dct parameters\n",
-    "sufix_title = f'_{args.lambda_cot_max}-lcm'\n",
-    "sufix_title = f'_{args.lambda_diff_max}-ldm'\n",
-    "sufix_title = f'_{args.warmup_length}-wl'\n",
-    "sufix_title = f'_{args.epsilon}-eps'\n",
+    "sufix_title = f\"_{args.lambda_cot_max}-lcm\"\n",
+    "sufix_title = f\"_{args.lambda_diff_max}-ldm\"\n",
+    "sufix_title = f\"_{args.warmup_length}-wl\"\n",
+    "sufix_title = f\"_{args.epsilon}-eps\"\n",
     "\n",
     "# mixup parameters\n",
     "if args.mixup:\n",
     "    sufix_title += \"_mixup\"\n",
-    "    if args.mixup_max: sufix_title += \"-max\"\n",
-    "    if args.mixup_label: sufix_title += \"-label\"\n",
+    "    if args.mixup_max:\n",
+    "        sufix_title += \"-max\"\n",
+    "    if args.mixup_label:\n",
+    "        sufix_title += \"-label\"\n",
     "    sufix_title += f\"-{args.mixup_alpha}-a\"\n",
-    "    \n",
+    "\n",
     "# normale training parameters\n",
-    "sufix_title += f'_{args.learning_rate}-lr'\n",
-    "sufix_title += f'_{args.supervised_ratio}-sr'\n",
-    "sufix_title += f'_{args.nb_epoch}-e'\n",
-    "sufix_title += f'_{args.batch_size}-bs'\n",
-    "sufix_title += f'_{args.seed}-seed'\n",
+    "sufix_title += f\"_{args.learning_rate}-lr\"\n",
+    "sufix_title += f\"_{args.supervised_ratio}-sr\"\n",
+    "sufix_title += f\"_{args.nb_epoch}-e\"\n",
+    "sufix_title += f\"_{args.batch_size}-bs\"\n",
+    "sufix_title += f\"_{args.seed}-seed\"\n",
     "\n",
     "tensorboard_title = tensorboard_root + sufix_title\n",
     "checkpoint_title = checkpoint_root + sufix_title"
@@ -522,7 +534,9 @@
     }
    ],
    "source": [
-    "tensorboard = mSummaryWriter(log_dir=\"%s/%s\" % (tensorboard_path, tensorboard_title), comment=model_func.__name__)\n",
+    "tensorboard = mSummaryWriter(\n",
+    "    log_dir=\"%s/%s\" % (tensorboard_path, tensorboard_title), comment=model_func.__name__\n",
+    ")\n",
     "print(os.path.join(tensorboard_path, tensorboard_title))"
    ]
   },
@@ -546,7 +560,9 @@
     ")\n",
     "\n",
     "optimizer = load_optimizer(args.dataset, \"dct\", model1=m1, model2=m2, **optim_args)\n",
-    "callbacks = load_callbacks(args.dataset, \"dct\", optimizer=optimizer, nb_epoch=args.nb_epoch)\n"
+    "callbacks = load_callbacks(\n",
+    "    args.dataset, \"dct\", optimizer=optimizer, nb_epoch=args.nb_epoch\n",
+    ")"
    ]
   },
   {
@@ -576,13 +592,21 @@
    "source": [
     "# adversarial generation\n",
     "adv_generator_1 = GradientSignAttack(\n",
-    "    m1, loss_fn=nn.CrossEntropyLoss(reduction=\"sum\"),\n",
-    "    eps=args.epsilon, clip_min=-np.inf, clip_max=np.inf, targeted=False\n",
+    "    m1,\n",
+    "    loss_fn=nn.CrossEntropyLoss(reduction=\"sum\"),\n",
+    "    eps=args.epsilon,\n",
+    "    clip_min=-np.inf,\n",
+    "    clip_max=np.inf,\n",
+    "    targeted=False,\n",
     ")\n",
     "\n",
     "adv_generator_2 = GradientSignAttack(\n",
-    "    m2, loss_fn=nn.CrossEntropyLoss(reduction=\"sum\"),\n",
-    "    eps=args.epsilon, clip_min=-np.inf, clip_max=np.inf, targeted=False\n",
+    "    m2,\n",
+    "    loss_fn=nn.CrossEntropyLoss(reduction=\"sum\"),\n",
+    "    eps=args.epsilon,\n",
+    "    clip_min=-np.inf,\n",
+    "    clip_max=np.inf,\n",
+    "    targeted=False,\n",
     ")"
    ]
   },
@@ -618,7 +642,12 @@
     "callbacks += [lambda_cot, lambda_diff]\n",
     "\n",
     "# checkpoints\n",
-    "checkpoint = CheckPoint([m1, m2], optimizer, mode=\"max\", name=\"%s/%s_m1.torch\" % (checkpoint_path, checkpoint_title))\n",
+    "checkpoint = CheckPoint(\n",
+    "    [m1, m2],\n",
+    "    optimizer,\n",
+    "    mode=\"max\",\n",
+    "    name=\"%s/%s_m1.torch\" % (checkpoint_path, checkpoint_title),\n",
+    ")\n",
     "\n",
     "# metrics\n",
     "metrics_fn = dict(\n",
@@ -628,7 +657,6 @@
     "    acc_u=[CategoricalAccuracy(), CategoricalAccuracy()],\n",
     "    f1_s=[FScore(), FScore()],\n",
     "    f1_u=[FScore(), FScore()],\n",
-    "    \n",
     "    avg_total=ContinueAverage(),\n",
     "    avg_sup=ContinueAverage(),\n",
     "    avg_cot=ContinueAverage(),\n",
@@ -643,8 +671,7 @@
     "            for f in item:\n",
     "                f.reset()\n",
     "        else:\n",
-    "            item.reset()\n",
-    "            "
+    "            item.reset()"
    ]
   },
   {
@@ -689,7 +716,7 @@
    "source": [
     "def get_lr(optimizer):\n",
     "    for param_group in optimizer.param_groups:\n",
-    "        return param_group['lr']"
+    "        return param_group[\"lr\"]"
    ]
   },
   {
@@ -723,10 +750,21 @@
     "RESET_SEQ = \"\\033[0m\"\n",
     "\n",
     "header_form = \"{:<8.8} {:<6.6} - {:<6.6} - {:<8.8} {:<6.6} | {:<6.6} | {:<6.6} | {:<6.6} - {:<9.9} {:<9.9} | {:<9.9}- {:<6.6}\"\n",
-    "value_form  = \"{:<8.8} {:<6} - {:<6} - {:<8.8} {:<6.4f} | {:<6.4f} | {:<6.4f} | {:<6.4f} - {:<9.9} {:<9.4f} | {:<9.4f}- {:<6.4f}\"\n",
+    "value_form = \"{:<8.8} {:<6} - {:<6} - {:<8.8} {:<6.4f} | {:<6.4f} | {:<6.4f} | {:<6.4f} - {:<9.9} {:<9.4f} | {:<9.4f}- {:<6.4f}\"\n",
     "\n",
     "header = header_form.format(\n",
-    "    \"\", \"Epoch\", \"%\", \"Losses:\", \"Lsup\", \"Lcot\", \"Ldiff\", \"total\", \"metrics: \", \"acc_s1\", \"acc_u1\",\"Time\"\n",
+    "    \"\",\n",
+    "    \"Epoch\",\n",
+    "    \"%\",\n",
+    "    \"Losses:\",\n",
+    "    \"Lsup\",\n",
+    "    \"Lcot\",\n",
+    "    \"Ldiff\",\n",
+    "    \"total\",\n",
+    "    \"metrics: \",\n",
+    "    \"acc_s1\",\n",
+    "    \"acc_u1\",\n",
+    "    \"Time\",\n",
     ")\n",
     "\n",
     "train_form = value_form\n",
@@ -741,7 +779,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mixup_fn = MixUpBatchShuffle(alpha=args.mixup_alpha, apply_max=args.mixup_max, mix_labels=args.mixup_label)"
+    "mixup_fn = MixUpBatchShuffle(\n",
+    "    alpha=args.mixup_alpha, apply_max=args.mixup_max, mix_labels=args.mixup_label\n",
+    ")"
    ]
   },
   {
@@ -773,7 +813,7 @@
     "        x_s1, y_s1 = S1\n",
     "        x_s2, y_s2 = S2\n",
     "        x_u, y_u = U\n",
-    "        \n",
+    "\n",
     "        # Apply mixup if needed, otherwise no mixup.\n",
     "        if args.mixup:\n",
     "            x_s, y_s = mixup_fn(x_s, y_s)\n",
@@ -797,7 +837,7 @@
     "        m1.eval()\n",
     "        m2.eval()\n",
     "\n",
-    "        #generate adversarial examples ----\n",
+    "        # generate adversarial examples ----\n",
     "        adv_data_s1 = adv_generator_1.perturb(x_s1, y_s1)\n",
     "        adv_data_u1 = adv_generator_1.perturb(x_u, pred_u1)\n",
     "\n",
@@ -817,8 +857,10 @@
     "\n",
     "        # ======== calculate the differents loss ========\n",
     "        # zero the parameter gradients ----\n",
-    "        for p in m1.parameters(): p.grad = None # zero grad\n",
-    "        for p in m2.parameters(): p.grad = None\n",
+    "        for p in m1.parameters():\n",
+    "            p.grad = None  # zero grad\n",
+    "        for p in m2.parameters():\n",
+    "            p.grad = None\n",
     "\n",
     "        # losses ----\n",
     "        with autocast():\n",
@@ -827,8 +869,14 @@
     "            l_cot = loss_cot(logits_u1, logits_u2)\n",
     "\n",
     "            l_diff = loss_diff(\n",
-    "                logits_s1, logits_s2, adv_logits_s1, adv_logits_s2,\n",
-    "                logits_u1, logits_u2, adv_logits_u1, adv_logits_u2\n",
+    "                logits_s1,\n",
+    "                logits_s2,\n",
+    "                adv_logits_s1,\n",
+    "                adv_logits_s2,\n",
+    "                logits_u1,\n",
+    "                logits_u2,\n",
+    "                adv_logits_u1,\n",
+    "                adv_logits_u2,\n",
     "            )\n",
     "\n",
     "            total_loss = l_sup + lambda_cot() * l_cot + lambda_diff() * l_diff\n",
@@ -864,23 +912,31 @@
     "            avg_cot = metrics_fn[\"avg_cot\"](l_cot.item())\n",
     "\n",
     "            # logs\n",
-    "            print(train_form.format(\n",
-    "                \"Training: \",\n",
-    "                epoch + 1,\n",
-    "                int(100 * (batch + 1) / len(train_loader)),\n",
-    "                \"\", avg_sup.mean, avg_cot.mean, avg_diff.mean, avg_total.mean,\n",
-    "                \"\", acc_s1.mean, acc_u1.mean,\n",
-    "                time.time() - start_time\n",
-    "            ), end=\"\\r\")\n",
-    "\n",
+    "            print(\n",
+    "                train_form.format(\n",
+    "                    \"Training: \",\n",
+    "                    epoch + 1,\n",
+    "                    int(100 * (batch + 1) / len(train_loader)),\n",
+    "                    \"\",\n",
+    "                    avg_sup.mean,\n",
+    "                    avg_cot.mean,\n",
+    "                    avg_diff.mean,\n",
+    "                    avg_total.mean,\n",
+    "                    \"\",\n",
+    "                    acc_s1.mean,\n",
+    "                    acc_u1.mean,\n",
+    "                    time.time() - start_time,\n",
+    "                ),\n",
+    "                end=\"\\r\",\n",
+    "            )\n",
     "\n",
     "    # using tensorboard to monitor loss and acc\\n\",\n",
-    "    tensorboard.add_scalar('train/total_loss', avg_total.mean, epoch)\n",
-    "    tensorboard.add_scalar('train/Lsup', avg_sup.mean, epoch )\n",
-    "    tensorboard.add_scalar('train/Lcot', avg_cot.mean, epoch )\n",
-    "    tensorboard.add_scalar('train/Ldiff', avg_diff.mean, epoch )\n",
-    "    tensorboard.add_scalar(\"train/acc_1\", acc_s1.mean, epoch )\n",
-    "    tensorboard.add_scalar(\"train/acc_2\", acc_s2.mean, epoch )\n",
+    "    tensorboard.add_scalar(\"train/total_loss\", avg_total.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/Lsup\", avg_sup.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/Lcot\", avg_cot.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/Ldiff\", avg_diff.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/acc_1\", acc_s1.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/acc_2\", acc_s2.mean, epoch)\n",
     "\n",
     "    tensorboard.add_scalar(\"detail_acc/acc_s1\", acc_s1.mean, epoch)\n",
     "    tensorboard.add_scalar(\"detail_acc/acc_s2\", acc_s2.mean, epoch)\n",
@@ -913,7 +969,7 @@
    },
    "outputs": [],
    "source": [
-    "def test(epoch, msg = \"\"):\n",
+    "def test(epoch, msg=\"\"):\n",
     "    start_time = time.time()\n",
     "    print(\"\")\n",
     "\n",
@@ -944,31 +1000,42 @@
     "            avg_sup = metrics_fn[\"avg_sup\"](l_sup.item())\n",
     "\n",
     "            # logs\n",
-    "            print(val_form.format(\n",
-    "                \"Validation: \",\n",
-    "                epoch + 1,\n",
-    "                int(100 * (batch + 1) / len(train_loader)),\n",
-    "                \"\", avg_sup.mean, 0.0, 0.0, avg_sup.mean,\n",
-    "                \"\", acc_1.mean, 0.0,\n",
-    "                time.time() - start_time\n",
-    "            ), end=\"\\r\")\n",
+    "            print(\n",
+    "                val_form.format(\n",
+    "                    \"Validation: \",\n",
+    "                    epoch + 1,\n",
+    "                    int(100 * (batch + 1) / len(train_loader)),\n",
+    "                    \"\",\n",
+    "                    avg_sup.mean,\n",
+    "                    0.0,\n",
+    "                    0.0,\n",
+    "                    avg_sup.mean,\n",
+    "                    \"\",\n",
+    "                    acc_1.mean,\n",
+    "                    0.0,\n",
+    "                    time.time() - start_time,\n",
+    "                ),\n",
+    "                end=\"\\r\",\n",
+    "            )\n",
     "\n",
     "    tensorboard.add_scalar(\"val/acc_1\", acc_1.mean, epoch)\n",
     "    tensorboard.add_scalar(\"val/acc_2\", acc_2.mean, epoch)\n",
-    "        \n",
-    "    tensorboard.add_scalar(\"max/acc_1\", maximum_tracker(\"acc_1\", acc_1.mean), epoch )\n",
-    "    tensorboard.add_scalar(\"max/acc_2\", maximum_tracker(\"acc_2\", acc_2.mean), epoch )\n",
-    "    \n",
+    "\n",
+    "    tensorboard.add_scalar(\"max/acc_1\", maximum_tracker(\"acc_1\", acc_1.mean), epoch)\n",
+    "    tensorboard.add_scalar(\"max/acc_2\", maximum_tracker(\"acc_2\", acc_2.mean), epoch)\n",
+    "\n",
     "    tensorboard.add_scalar(\"detail_hyperparameters/lambda_cot\", lambda_cot(), epoch)\n",
     "    tensorboard.add_scalar(\"detail_hyperparameters/lambda_diff\", lambda_diff(), epoch)\n",
-    "    tensorboard.add_scalar(\"detail_hyperparameters/learning_rate\", get_lr(optimizer), epoch)\n",
+    "    tensorboard.add_scalar(\n",
+    "        \"detail_hyperparameters/learning_rate\", get_lr(optimizer), epoch\n",
+    "    )\n",
     "\n",
     "    # Apply callbacks\n",
     "    for c in callbacks:\n",
     "        c.step()\n",
     "\n",
     "    # call checkpoint\n",
-    "    checkpoint.step(acc_1.mean)\n"
+    "    checkpoint.step(acc_1.mean)"
    ]
   },
   {
@@ -1081,11 +1148,11 @@
     "print(header)\n",
     "for epoch in range(0, args.nb_epoch):\n",
     "    total_loss = train(epoch)\n",
-    "    \n",
+    "\n",
     "    if np.isnan(total_loss):\n",
     "        print(\"Losses are NaN, stoping the training here\")\n",
     "        break\n",
-    "        \n",
+    "\n",
     "    test(epoch)\n",
     "\n",
     "    tensorboard.flush()"
