--- a/notebooks/deep-co-training/co-training_mse.ipynb
+++ b/notebooks/deep-co-training/co-training_mse.ipynb
@@ -43,6 +43,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.environ[\"MKL_NUM_THREADS\"] = \"2\"\n",
     "os.environ[\"NUMEXPR_NU M_THREADS\"] = \"2\"\n",
     "os.environ[\"OMP_NUM_THREADS\"] = \"2\"\n",
@@ -57,6 +58,7 @@
     "from torch.nn.parallel import DataParallel\n",
     "import torchvision.transforms as transforms\n",
     "from torch.optim.lr_scheduler import LambdaLR\n",
+    "\n",
     "# from torch.utils.tensorboard import SummaryWriter\n",
     "from advertorch.attacks import GradientSignAttack"
    ]
@@ -80,7 +82,12 @@
     "from SSL.util.checkpoint import CheckPoint, mSummaryWriter\n",
     "from SSL.util.utils import reset_seed, get_datetime, ZipCycle, track_maximum\n",
     "from SSL.util.model_loader import load_model\n",
-    "from SSL.util.loaders import load_dataset, load_optimizer, load_callbacks, load_preprocesser\n",
+    "from SSL.util.loaders import (\n",
+    "    load_dataset,\n",
+    "    load_optimizer,\n",
+    "    load_callbacks,\n",
+    "    load_preprocesser,\n",
+    ")\n",
     "\n",
     "from SSL.ramps import Warmup, sigmoid_rampup\n",
     "from SSL.losses import loss_cot, loss_diff, loss_sup"
@@ -111,6 +118,7 @@
    "outputs": [],
    "source": [
     "import argparse\n",
+    "\n",
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument(\"--from_config\", default=\"\", type=str)\n",
     "parser.add_argument(\"-d\", \"--dataset_root\", default=\"../../datasets/\", type=str)\n",
@@ -132,7 +140,7 @@
     "group_u.add_argument(\"-t\", \"--train_folds\", nargs=\"+\", default=[1, 2, 3, 4], type=int)\n",
     "group_u.add_argument(\"-v\", \"--val_folds\", nargs=\"+\", default=[5], type=int)\n",
     "\n",
-    "group_h = parser.add_argument_group('hyperparameters')\n",
+    "group_h = parser.add_argument_group(\"hyperparameters\")\n",
     "group_h.add_argument(\"--lambda_cot_max\", default=1, type=float)\n",
     "group_h.add_argument(\"--lambda_diff_max\", default=0.5, type=float)\n",
     "group_h.add_argument(\"--warmup_length\", default=160, type=int)\n",
@@ -147,7 +155,9 @@
     "\n",
     "args = parser.parse_args(\"\")\n",
     "\n",
-    "tensorboard_path = os.path.join(args.tensorboard_root, args.dataset, args.tensorboard_path)\n",
+    "tensorboard_path = os.path.join(\n",
+    "    args.tensorboard_root, args.dataset, args.tensorboard_path\n",
+    ")\n",
     "checkpoint_path = os.path.join(args.checkpoint_root, args.dataset, args.checkpoint_path)"
    ]
   },
@@ -250,20 +260,16 @@
     "manager, train_loader, val_loader = load_dataset(\n",
     "    args.dataset,\n",
     "    \"dct\",\n",
-    "    \n",
-    "    dataset_root = args.dataset_root,\n",
-    "    supervised_ratio = args.supervised_ratio,\n",
-    "    batch_size = args.batch_size,\n",
-    "    train_folds = args.train_folds,\n",
-    "    val_folds = args.val_folds,\n",
-    "\n",
+    "    dataset_root=args.dataset_root,\n",
+    "    supervised_ratio=args.supervised_ratio,\n",
+    "    batch_size=args.batch_size,\n",
+    "    train_folds=args.train_folds,\n",
+    "    val_folds=args.val_folds,\n",
     "    train_transform=train_transform,\n",
     "    val_transform=val_transform,\n",
-    "    \n",
     "    num_workers=2,\n",
     "    pin_memory=True,\n",
-    "\n",
-    "    verbose = 2\n",
+    "    verbose=2,\n",
     ")"
    ]
   },
@@ -452,7 +458,7 @@
    "source": [
     "from torchsummary import summary\n",
     "\n",
-    "s = summary(m1, tuple(input_shape))\n"
+    "s = summary(m1, tuple(input_shape))"
    ]
   },
   {
@@ -483,12 +489,15 @@
    ],
    "source": [
     "# tensorboard\n",
-    "tensorboard_title = f\"{args.model}/{args.supervised_ratio}S/\" \\\n",
-    "                    f\"{get_datetime()}_{model_func.__name__}_MSE\"\n",
-    "checkpoint_title = f\"{args.model}/{args.supervised_ratio}S/\" \\\n",
-    "                   f\"{args.model}_MSE\"\n",
+    "tensorboard_title = (\n",
+    "    f\"{args.model}/{args.supervised_ratio}S/\"\n",
+    "    f\"{get_datetime()}_{model_func.__name__}_MSE\"\n",
+    ")\n",
+    "checkpoint_title = f\"{args.model}/{args.supervised_ratio}S/\" f\"{args.model}_MSE\"\n",
     "\n",
-    "tensorboard = mSummaryWriter(log_dir=f\"{tensorboard_path}/{tensorboard_title}\",comment=model_func.__name__)\n",
+    "tensorboard = mSummaryWriter(\n",
+    "    log_dir=f\"{tensorboard_path}/{tensorboard_title}\", comment=model_func.__name__\n",
+    ")\n",
     "print(os.path.join(tensorboard_path, tensorboard_title))"
    ]
   },
@@ -512,7 +521,9 @@
     ")\n",
     "\n",
     "optimizer = load_optimizer(args.dataset, \"dct\", model1=m1, model2=m2, **optim_args)\n",
-    "callbacks = load_callbacks(args.dataset, \"dct\", optimizer=optimizer, nb_epoch=args.nb_epoch)\n"
+    "callbacks = load_callbacks(\n",
+    "    args.dataset, \"dct\", optimizer=optimizer, nb_epoch=args.nb_epoch\n",
+    ")"
    ]
   },
   {
@@ -542,13 +553,21 @@
    "source": [
     "# adversarial generation\n",
     "adv_generator_1 = GradientSignAttack(\n",
-    "    m1, loss_fn=nn.CrossEntropyLoss(reduction=\"sum\"),\n",
-    "    eps=args.epsilon, clip_min=-np.inf, clip_max=np.inf, targeted=False\n",
+    "    m1,\n",
+    "    loss_fn=nn.CrossEntropyLoss(reduction=\"sum\"),\n",
+    "    eps=args.epsilon,\n",
+    "    clip_min=-np.inf,\n",
+    "    clip_max=np.inf,\n",
+    "    targeted=False,\n",
     ")\n",
     "\n",
     "adv_generator_2 = GradientSignAttack(\n",
-    "    m2, loss_fn=nn.CrossEntropyLoss(reduction=\"sum\"),\n",
-    "    eps=args.epsilon, clip_min=-np.inf, clip_max=np.inf, targeted=False\n",
+    "    m2,\n",
+    "    loss_fn=nn.CrossEntropyLoss(reduction=\"sum\"),\n",
+    "    eps=args.epsilon,\n",
+    "    clip_min=-np.inf,\n",
+    "    clip_max=np.inf,\n",
+    "    targeted=False,\n",
     ")"
    ]
   },
@@ -568,6 +587,7 @@
     "# Losses\n",
     "# see losses.py\n",
     "import torch.nn as nn\n",
+    "\n",
     "mse_loss = nn.MSELoss(reduction=\"mean\")\n",
     "\n",
     "# define the warmups & add them to the callbacks (for update)\n",
@@ -576,7 +596,12 @@
     "callbacks += [lambda_cot, lambda_diff]\n",
     "\n",
     "# checkpoints\n",
-    "checkpoint = CheckPoint([m1, m2], optimizer, mode=\"max\", name=\"%s/%s_m1.torch\" % (checkpoint_path, checkpoint_title))\n",
+    "checkpoint = CheckPoint(\n",
+    "    [m1, m2],\n",
+    "    optimizer,\n",
+    "    mode=\"max\",\n",
+    "    name=\"%s/%s_m1.torch\" % (checkpoint_path, checkpoint_title),\n",
+    ")\n",
     "\n",
     "# metrics\n",
     "metrics_fn = dict(\n",
@@ -586,7 +611,6 @@
     "    acc_u=[CategoricalAccuracy(), CategoricalAccuracy()],\n",
     "    f1_s=[FScore(), FScore()],\n",
     "    f1_u=[FScore(), FScore()],\n",
-    "    \n",
     "    avg_total=ContinueAverage(),\n",
     "    avg_sup=ContinueAverage(),\n",
     "    avg_cot=ContinueAverage(),\n",
@@ -601,8 +625,7 @@
     "            for f in item:\n",
     "                f.reset()\n",
     "        else:\n",
-    "            item.reset()\n",
-    "            "
+    "            item.reset()"
    ]
   },
   {
@@ -675,7 +698,7 @@
    "source": [
     "def get_lr(optimizer):\n",
     "    for param_group in optimizer.param_groups:\n",
-    "        return param_group['lr']"
+    "        return param_group[\"lr\"]"
    ]
   },
   {
@@ -709,10 +732,21 @@
     "RESET_SEQ = \"\\033[0m\"\n",
     "\n",
     "header_form = \"{:<8.8} {:<6.6} - {:<6.6} - {:<8.8} {:<6.6} | {:<6.6} | {:<6.6} | {:<6.6} - {:<9.9} {:<9.9} | {:<9.9}- {:<6.6}\"\n",
-    "value_form  = \"{:<8.8} {:<6} - {:<6} - {:<8.8} {:<6.4f} | {:<6.4f} | {:<6.4f} | {:<6.4f} - {:<9.9} {:<9.4f} | {:<9.4f}- {:<6.4f}\"\n",
+    "value_form = \"{:<8.8} {:<6} - {:<6} - {:<8.8} {:<6.4f} | {:<6.4f} | {:<6.4f} | {:<6.4f} - {:<9.9} {:<9.4f} | {:<9.4f}- {:<6.4f}\"\n",
     "\n",
     "header = header_form.format(\n",
-    "    \"\", \"Epoch\", \"%\", \"Losses:\", \"Lsup\", \"Lcot\", \"Ldiff\", \"total\", \"metrics: \", \"acc_s1\", \"acc_u1\",\"Time\"\n",
+    "    \"\",\n",
+    "    \"Epoch\",\n",
+    "    \"%\",\n",
+    "    \"Losses:\",\n",
+    "    \"Lsup\",\n",
+    "    \"Lcot\",\n",
+    "    \"Ldiff\",\n",
+    "    \"total\",\n",
+    "    \"metrics: \",\n",
+    "    \"acc_s1\",\n",
+    "    \"acc_u1\",\n",
+    "    \"Time\",\n",
     ")\n",
     "\n",
     "train_form = value_form\n",
@@ -769,7 +803,7 @@
     "        m1.eval()\n",
     "        m2.eval()\n",
     "\n",
-    "        #generate adversarial examples ----\n",
+    "        # generate adversarial examples ----\n",
     "        adv_data_s1 = adv_generator_1.perturb(x_s1, y_s1)\n",
     "        adv_data_u1 = adv_generator_1.perturb(x_u, pred_u1)\n",
     "\n",
@@ -789,8 +823,10 @@
     "\n",
     "        # ======== calculate the differents loss ========\n",
     "        # zero the parameter gradients ----\n",
-    "        for p in m1.parameters(): p.grad = None # zero grad\n",
-    "        for p in m2.parameters(): p.grad = None\n",
+    "        for p in m1.parameters():\n",
+    "            p.grad = None  # zero grad\n",
+    "        for p in m2.parameters():\n",
+    "            p.grad = None\n",
     "\n",
     "        # losses ----\n",
     "        with autocast():\n",
@@ -800,8 +836,14 @@
     "            l_cot = mse_loss(logits_u1, logits_u2)\n",
     "\n",
     "            l_diff = loss_diff(\n",
-    "                logits_s1, logits_s2, adv_logits_s1, adv_logits_s2,\n",
-    "                logits_u1, logits_u2, adv_logits_u1, adv_logits_u2\n",
+    "                logits_s1,\n",
+    "                logits_s2,\n",
+    "                adv_logits_s1,\n",
+    "                adv_logits_s2,\n",
+    "                logits_u1,\n",
+    "                logits_u2,\n",
+    "                adv_logits_u1,\n",
+    "                adv_logits_u2,\n",
     "            )\n",
     "\n",
     "            total_loss = l_sup + lambda_cot() * l_cot + lambda_diff() * l_diff\n",
@@ -837,23 +879,31 @@
     "            avg_cot = metrics_fn[\"avg_cot\"](l_cot.item())\n",
     "\n",
     "            # logs\n",
-    "            print(train_form.format(\n",
-    "                \"Training: \",\n",
-    "                epoch + 1,\n",
-    "                int(100 * (batch + 1) / len(train_loader)),\n",
-    "                \"\", avg_sup.mean, avg_cot.mean, avg_diff.mean, avg_total.mean,\n",
-    "                \"\", acc_s1.mean, acc_u1.mean,\n",
-    "                time.time() - start_time\n",
-    "            ), end=\"\\r\")\n",
-    "\n",
+    "            print(\n",
+    "                train_form.format(\n",
+    "                    \"Training: \",\n",
+    "                    epoch + 1,\n",
+    "                    int(100 * (batch + 1) / len(train_loader)),\n",
+    "                    \"\",\n",
+    "                    avg_sup.mean,\n",
+    "                    avg_cot.mean,\n",
+    "                    avg_diff.mean,\n",
+    "                    avg_total.mean,\n",
+    "                    \"\",\n",
+    "                    acc_s1.mean,\n",
+    "                    acc_u1.mean,\n",
+    "                    time.time() - start_time,\n",
+    "                ),\n",
+    "                end=\"\\r\",\n",
+    "            )\n",
     "\n",
     "    # using tensorboard to monitor loss and acc\\n\",\n",
-    "    tensorboard.add_scalar('train/total_loss', avg_total.mean, epoch)\n",
-    "    tensorboard.add_scalar('train/Lsup', avg_sup.mean, epoch )\n",
-    "    tensorboard.add_scalar('train/Lcot', avg_cot.mean, epoch )\n",
-    "    tensorboard.add_scalar('train/Ldiff', avg_diff.mean, epoch )\n",
-    "    tensorboard.add_scalar(\"train/acc_1\", acc_s1.mean, epoch )\n",
-    "    tensorboard.add_scalar(\"train/acc_2\", acc_s2.mean, epoch )\n",
+    "    tensorboard.add_scalar(\"train/total_loss\", avg_total.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/Lsup\", avg_sup.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/Lcot\", avg_cot.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/Ldiff\", avg_diff.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/acc_1\", acc_s1.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/acc_2\", acc_s2.mean, epoch)\n",
     "\n",
     "    tensorboard.add_scalar(\"detail_acc/acc_s1\", acc_s1.mean, epoch)\n",
     "    tensorboard.add_scalar(\"detail_acc/acc_s2\", acc_s2.mean, epoch)\n",
@@ -886,7 +936,7 @@
    },
    "outputs": [],
    "source": [
-    "def test(epoch, msg = \"\"):\n",
+    "def test(epoch, msg=\"\"):\n",
     "    start_time = time.time()\n",
     "    print(\"\")\n",
     "\n",
@@ -917,31 +967,42 @@
     "            avg_sup = metrics_fn[\"avg_sup\"](l_sup.item())\n",
     "\n",
     "            # logs\n",
-    "            print(val_form.format(\n",
-    "                \"Validation: \",\n",
-    "                epoch + 1,\n",
-    "                int(100 * (batch + 1) / len(train_loader)),\n",
-    "                \"\", avg_sup.mean, 0.0, 0.0, avg_sup.mean,\n",
-    "                \"\", acc_1.mean, 0.0,\n",
-    "                time.time() - start_time\n",
-    "            ), end=\"\\r\")\n",
+    "            print(\n",
+    "                val_form.format(\n",
+    "                    \"Validation: \",\n",
+    "                    epoch + 1,\n",
+    "                    int(100 * (batch + 1) / len(train_loader)),\n",
+    "                    \"\",\n",
+    "                    avg_sup.mean,\n",
+    "                    0.0,\n",
+    "                    0.0,\n",
+    "                    avg_sup.mean,\n",
+    "                    \"\",\n",
+    "                    acc_1.mean,\n",
+    "                    0.0,\n",
+    "                    time.time() - start_time,\n",
+    "                ),\n",
+    "                end=\"\\r\",\n",
+    "            )\n",
     "\n",
     "    tensorboard.add_scalar(\"val/acc_1\", acc_1.mean, epoch)\n",
     "    tensorboard.add_scalar(\"val/acc_2\", acc_2.mean, epoch)\n",
-    "        \n",
-    "    tensorboard.add_scalar(\"max/acc_1\", maximum_tracker(\"acc_1\", acc_1.mean), epoch )\n",
-    "    tensorboard.add_scalar(\"max/acc_2\", maximum_tracker(\"acc_2\", acc_2.mean), epoch )\n",
-    "    \n",
+    "\n",
+    "    tensorboard.add_scalar(\"max/acc_1\", maximum_tracker(\"acc_1\", acc_1.mean), epoch)\n",
+    "    tensorboard.add_scalar(\"max/acc_2\", maximum_tracker(\"acc_2\", acc_2.mean), epoch)\n",
+    "\n",
     "    tensorboard.add_scalar(\"detail_hyperparameters/lambda_cot\", lambda_cot(), epoch)\n",
     "    tensorboard.add_scalar(\"detail_hyperparameters/lambda_diff\", lambda_diff(), epoch)\n",
-    "    tensorboard.add_scalar(\"detail_hyperparameters/learning_rate\", get_lr(optimizer), epoch)\n",
+    "    tensorboard.add_scalar(\n",
+    "        \"detail_hyperparameters/learning_rate\", get_lr(optimizer), epoch\n",
+    "    )\n",
     "\n",
     "    # Apply callbacks\n",
     "    for c in callbacks:\n",
     "        c.step()\n",
     "\n",
     "    # call checkpoint\n",
-    "    checkpoint.step(acc_1.mean)\n"
+    "    checkpoint.step(acc_1.mean)"
    ]
   },
   {
@@ -1261,11 +1322,11 @@
     "\n",
     "for epoch in range(0, args.nb_epoch):\n",
     "    total_loss = train(epoch)\n",
-    "    \n",
+    "\n",
     "    if np.isnan(total_loss):\n",
     "        print(\"Losses are NaN, stoping the training here\")\n",
     "        break\n",
-    "        \n",
+    "\n",
     "    test(epoch)\n",
     "\n",
     "    tensorboard.flush()"
@@ -4158,9 +4219,13 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "x = list(range(checkpoint.epoch_counter))\n",
-    "sm = lambda y, w: np.convolve(y, np.ones(w)/w, mode='same')\n",
-    "pp = lambda k: plt.plot(x, tensorboard.history[k], label=f\"{k} = {max(tensorboard.history[k])}\")\n",
-    "spp = lambda k: plt.plot(x, sm(tensorboard.history[k], 5), label=f\"{k} = {max(tensorboard.history[k])}\")\n",
+    "sm = lambda y, w: np.convolve(y, np.ones(w) / w, mode=\"same\")\n",
+    "pp = lambda k: plt.plot(\n",
+    "    x, tensorboard.history[k], label=f\"{k} = {max(tensorboard.history[k])}\"\n",
+    ")\n",
+    "spp = lambda k: plt.plot(\n",
+    "    x, sm(tensorboard.history[k], 5), label=f\"{k} = {max(tensorboard.history[k])}\"\n",
+    ")\n",
     "\n",
     "\n",
     "plt.figure(0, figsize=(30, 14))\n",
