--- a/notebooks/deep-co-training/co-training_noAdv.ipynb
+++ b/notebooks/deep-co-training/co-training_noAdv.ipynb
@@ -40,6 +40,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.environ[\"MKL_NUM_THREADS\"] = \"2\"\n",
     "os.environ[\"NUMEXPR_NU M_THREADS\"] = \"2\"\n",
     "os.environ[\"OMP_NUM_THREADS\"] = \"2\"\n",
@@ -103,11 +104,14 @@
    "outputs": [],
    "source": [
     "import argparse\n",
+    "\n",
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument(\"-d\", \"--dataset_root\", default=\"../datasets/ubs8k\", type=str)\n",
     "parser.add_argument(\"--supervised_ratio\", default=0.1, type=float)\n",
     "parser.add_argument(\"--supervised_mult\", default=1.0, type=float)\n",
-    "parser.add_argument(\"-t\", \"--train_folds\", nargs=\"+\", default=[1, 2, 3, 4, 5, 6, 7, 8, 9], type=int)\n",
+    "parser.add_argument(\n",
+    "    \"-t\", \"--train_folds\", nargs=\"+\", default=[1, 2, 3, 4, 5, 6, 7, 8, 9], type=int\n",
+    ")\n",
     "parser.add_argument(\"-v\", \"--val_folds\", nargs=\"+\", default=[10], type=int)\n",
     "\n",
     "parser.add_argument(\"--model\", default=\"cnn03\", type=str)\n",
@@ -118,13 +122,25 @@
     "parser.add_argument(\"--lambda_cot_max\", default=10, type=float)\n",
     "parser.add_argument(\"--warmup_length\", default=80, type=int)\n",
     "\n",
-    "parser.add_argument(\"--augment\", action=\"append\", help=\"augmentation. use as if python script\")\n",
-    "parser.add_argument(\"--augment_S\", action=\"store_true\", help=\"Apply augmentation on Supervised part\")\n",
-    "parser.add_argument(\"--augment_U\", action=\"store_true\", help=\"Apply augmentation on Unsupervised part\")\n",
+    "parser.add_argument(\n",
+    "    \"--augment\", action=\"append\", help=\"augmentation. use as if python script\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"--augment_S\", action=\"store_true\", help=\"Apply augmentation on Supervised part\"\n",
+    ")\n",
+    "parser.add_argument(\n",
+    "    \"--augment_U\", action=\"store_true\", help=\"Apply augmentation on Unsupervised part\"\n",
+    ")\n",
     "\n",
-    "parser.add_argument(\"--checkpoint_path\", default=\"../model_save/ubs8k/deep-co-training_noAdv\", type=str)\n",
+    "parser.add_argument(\n",
+    "    \"--checkpoint_path\", default=\"../model_save/ubs8k/deep-co-training_noAdv\", type=str\n",
+    ")\n",
     "parser.add_argument(\"--resume\", action=\"store_true\", default=False)\n",
-    "parser.add_argument(\"--tensorboard_path\", default=\"../tensorboard/ubs8k/deep-co-training_noAdv\", type=str)\n",
+    "parser.add_argument(\n",
+    "    \"--tensorboard_path\",\n",
+    "    default=\"../tensorboard/ubs8k/deep-co-training_noAdv\",\n",
+    "    type=str,\n",
+    ")\n",
     "parser.add_argument(\"--tensorboard_sufix\", default=\"\", type=str)\n",
     "\n",
     "args = parser.parse_args(\"\")"
@@ -173,11 +189,7 @@
     "metadata_root = os.path.join(args.dataset_root, \"metadata\")\n",
     "all_folds = args.train_folds + args.val_folds\n",
     "\n",
-    "manager = DatasetManager(\n",
-    "    metadata_root, audio_root,\n",
-    "    folds=all_folds,\n",
-    "    verbose=2\n",
-    ")"
+    "manager = DatasetManager(metadata_root, audio_root, folds=all_folds, verbose=2)"
    ]
   },
   {
@@ -188,7 +200,7 @@
    "source": [
     "# prepare the sampler with the specified number of supervised file\n",
     "train_dataset = Dataset(manager, folds=args.train_folds, cached=True)\n",
-    "val_dataset = Dataset(manager, folds=args.val_folds, cached=True)\n"
+    "val_dataset = Dataset(manager, folds=args.val_folds, cached=True)"
    ]
   },
   {
@@ -259,7 +271,6 @@
     }
    ],
    "source": [
-    "\n",
     "s_idx, u_idx = train_dataset.split_s_u(args.supervised_ratio)\n",
     "\n",
     "# Calc the size of the Supervised and Unsupervised batch\n",
@@ -276,12 +287,18 @@
     "sampler_s2 = data.SubsetRandomSampler(s_idx)\n",
     "sampler_u = data.SubsetRandomSampler(u_idx)\n",
     "\n",
-    "train_loader_s1 = data.DataLoader(train_dataset, batch_size=s_batch_size, sampler=sampler_s1)\n",
-    "train_loader_s2 = data.DataLoader(train_dataset, batch_size=s_batch_size, sampler=sampler_s2)\n",
-    "train_loader_u = data.DataLoader(train_dataset, batch_size=u_batch_size, sampler=sampler_u)\n",
+    "train_loader_s1 = data.DataLoader(\n",
+    "    train_dataset, batch_size=s_batch_size, sampler=sampler_s1\n",
+    ")\n",
+    "train_loader_s2 = data.DataLoader(\n",
+    "    train_dataset, batch_size=s_batch_size, sampler=sampler_s2\n",
+    ")\n",
+    "train_loader_u = data.DataLoader(\n",
+    "    train_dataset, batch_size=u_batch_size, sampler=sampler_u\n",
+    ")\n",
     "\n",
     "train_loader = ZipCycle([train_loader_s1, train_loader_s2, train_loader_u])\n",
-    "val_loader = data.DataLoader(val_dataset, batch_size=args.batch_size, shuffle=True)\n"
+    "val_loader = data.DataLoader(val_dataset, batch_size=args.batch_size, shuffle=True)"
    ]
   },
   {
@@ -306,9 +323,16 @@
    "outputs": [],
    "source": [
     "# tensorboard\n",
-    "tensorboard_title = \"%s_%s_%.1f\" % (get_datetime(), model_func.__name__, args.supervised_ratio)\n",
+    "tensorboard_title = \"%s_%s_%.1f\" % (\n",
+    "    get_datetime(),\n",
+    "    model_func.__name__,\n",
+    "    args.supervised_ratio,\n",
+    ")\n",
     "checkpoint_title = \"%s_%.1f\" % (model_func.__name__, args.supervised_ratio)\n",
-    "tensorboard = SummaryWriter(log_dir=\"%s/%s\" % (args.tensorboard_path, tensorboard_title), comment=model_func.__name__)\n",
+    "tensorboard = SummaryWriter(\n",
+    "    log_dir=\"%s/%s\" % (args.tensorboard_path, tensorboard_title),\n",
+    "    comment=model_func.__name__,\n",
+    ")\n",
     "\n",
     "# Losses\n",
     "# see losses.py\n",
@@ -322,13 +346,23 @@
     "lambda_cot = Warmup(args.lambda_cot_max, args.warmup_length, sigmoid_rampup)\n",
     "\n",
     "# callback\n",
-    "lr_lambda = lambda epoch: (1.0 + np.cos((epoch-1) * np.pi / args.nb_epoch))\n",
+    "lr_lambda = lambda epoch: (1.0 + np.cos((epoch - 1) * np.pi / args.nb_epoch))\n",
     "lr_scheduler = LambdaLR(optimizer, lr_lambda)\n",
     "callbacks = [lr_scheduler, lambda_cot]\n",
     "\n",
     "# checkpoints\n",
-    "checkpoint_m1 = CheckPoint(m1, optimizer, mode=\"max\", name=\"%s/%s_m1.torch\" % (args.checkpoint_path, checkpoint_title))\n",
-    "checkpoint_m2 = CheckPoint(m2, optimizer, mode=\"max\", name=\"%s/%s_m2.torch\" % (args.checkpoint_path, checkpoint_title))\n",
+    "checkpoint_m1 = CheckPoint(\n",
+    "    m1,\n",
+    "    optimizer,\n",
+    "    mode=\"max\",\n",
+    "    name=\"%s/%s_m1.torch\" % (args.checkpoint_path, checkpoint_title),\n",
+    ")\n",
+    "checkpoint_m2 = CheckPoint(\n",
+    "    m2,\n",
+    "    optimizer,\n",
+    "    mode=\"max\",\n",
+    "    name=\"%s/%s_m2.torch\" % (args.checkpoint_path, checkpoint_title),\n",
+    ")\n",
     "\n",
     "# metrics\n",
     "metrics_fn = dict(\n",
@@ -338,12 +372,12 @@
     "    acc_u=[CategoricalAccuracy(), CategoricalAccuracy()],\n",
     "    f1_s=[FScore(), FScore()],\n",
     "    f1_u=[FScore(), FScore()],\n",
-    "    \n",
     "    avg_total=ContinueAverage(),\n",
     "    avg_sup=ContinueAverage(),\n",
     "    avg_cot=ContinueAverage(),\n",
     "    avg_diff=ContinueAverage(),\n",
     ")\n",
+    "\n",
     "\n",
     "def reset_metrics():\n",
     "    for item in metrics_fn.values():\n",
@@ -411,8 +445,9 @@
    "source": [
     "def get_lr(optimizer):\n",
     "    for param_group in optimizer.param_groups:\n",
-    "        return param_group['lr']\n",
-    "    \n",
+    "        return param_group[\"lr\"]\n",
+    "\n",
+    "\n",
     "def maximum():\n",
     "    def func(key, value):\n",
     "        if key not in func.max:\n",
@@ -424,6 +459,8 @@
     "\n",
     "    func.max = dict()\n",
     "    return func\n",
+    "\n",
+    "\n",
     "maximum_fn = maximum()"
    ]
   },
@@ -458,10 +495,20 @@
     "\n",
     "\n",
     "header_form = \"{:<8.8} {:<6.6} - {:<6.6} - {:<8.8} {:<6.6} | {:<6.6} | {:<6.6} - {:<9.9} {:<9.9} | {:<9.9}- {:<6.6}\"\n",
-    "value_form  = \"{:<8.8} {:<6} - {:<6} - {:<8.8} {:<6.4f} | {:<6.4f} | {:<6.4f} - {:<9.9} {:<9.4f} | {:<9.4f}- {:<6.4f}\"\n",
+    "value_form = \"{:<8.8} {:<6} - {:<6} - {:<8.8} {:<6.4f} | {:<6.4f} | {:<6.4f} - {:<9.9} {:<9.4f} | {:<9.4f}- {:<6.4f}\"\n",
     "\n",
     "header = header_form.format(\n",
-    "    \"\", \"Epoch\", \"%\", \"Losses:\", \"Lsup\", \"Lcot\", \"total\", \"metrics: \", \"acc_s1\", \"acc_u1\",\"Time\"\n",
+    "    \"\",\n",
+    "    \"Epoch\",\n",
+    "    \"%\",\n",
+    "    \"Losses:\",\n",
+    "    \"Lsup\",\n",
+    "    \"Lcot\",\n",
+    "    \"total\",\n",
+    "    \"metrics: \",\n",
+    "    \"acc_s1\",\n",
+    "    \"acc_u1\",\n",
+    "    \"Time\",\n",
     ")\n",
     "\n",
     "\n",
@@ -517,7 +564,7 @@
     "        l_cot = loss_cot(logits_u1, logits_u2)\n",
     "\n",
     "        total_loss = l_sup + lambda_cot() * l_cot\n",
-    "        \n",
+    "\n",
     "        optimizer.zero_grad()\n",
     "        grad_scaler.scale(total_loss).backward()\n",
     "        grad_scaler.step(optimizer)\n",
@@ -541,22 +588,29 @@
     "            avg_cot = metrics_fn[\"avg_cot\"](l_cot.item())\n",
     "\n",
     "            # logs\n",
-    "            print(train_form.format(\n",
-    "                \"Training: \",\n",
-    "                epoch + 1,\n",
-    "                int(100 * (batch + 1) / len(train_loader)),\n",
-    "                \"\", avg_sup.mean, avg_cot.mean, avg_total.mean,\n",
-    "                \"\", acc_s1.mean, acc_u1.mean,\n",
-    "                time.time() - start_time\n",
-    "            ), end=\"\\r\")\n",
-    "\n",
+    "            print(\n",
+    "                train_form.format(\n",
+    "                    \"Training: \",\n",
+    "                    epoch + 1,\n",
+    "                    int(100 * (batch + 1) / len(train_loader)),\n",
+    "                    \"\",\n",
+    "                    avg_sup.mean,\n",
+    "                    avg_cot.mean,\n",
+    "                    avg_total.mean,\n",
+    "                    \"\",\n",
+    "                    acc_s1.mean,\n",
+    "                    acc_u1.mean,\n",
+    "                    time.time() - start_time,\n",
+    "                ),\n",
+    "                end=\"\\r\",\n",
+    "            )\n",
     "\n",
     "    # using tensorboard to monitor loss and acc\\n\",\n",
-    "    tensorboard.add_scalar('train/total_loss', avg_total.mean, epoch)\n",
-    "    tensorboard.add_scalar('train/Lsup', avg_sup.mean, epoch )\n",
-    "    tensorboard.add_scalar('train/Lcot', avg_cot.mean, epoch )\n",
-    "    tensorboard.add_scalar(\"train/acc_1\", acc_s1.mean, epoch )\n",
-    "    tensorboard.add_scalar(\"train/acc_2\", acc_s2.mean, epoch )\n",
+    "    tensorboard.add_scalar(\"train/total_loss\", avg_total.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/Lsup\", avg_sup.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/Lcot\", avg_cot.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/acc_1\", acc_s1.mean, epoch)\n",
+    "    tensorboard.add_scalar(\"train/acc_2\", acc_s2.mean, epoch)\n",
     "\n",
     "    tensorboard.add_scalar(\"detail_acc/acc_s1\", acc_s1.mean, epoch)\n",
     "    tensorboard.add_scalar(\"detail_acc/acc_s2\", acc_s2.mean, epoch)\n",
@@ -611,23 +665,33 @@
     "            avg_sup = metrics_fn[\"avg_sup\"](l_sup.item())\n",
     "\n",
     "            # logs\n",
-    "            print(val_form.format(\n",
-    "                \"Validation: \",\n",
-    "                epoch + 1,\n",
-    "                int(100 * (batch + 1) / len(val_loader)),\n",
-    "                \"\", avg_sup.mean, 0.0, avg_sup.mean,\n",
-    "                \"\", acc_1.mean, 0.0,\n",
-    "                time.time() - start_time\n",
-    "            ), end=\"\\r\")\n",
+    "            print(\n",
+    "                val_form.format(\n",
+    "                    \"Validation: \",\n",
+    "                    epoch + 1,\n",
+    "                    int(100 * (batch + 1) / len(val_loader)),\n",
+    "                    \"\",\n",
+    "                    avg_sup.mean,\n",
+    "                    0.0,\n",
+    "                    avg_sup.mean,\n",
+    "                    \"\",\n",
+    "                    acc_1.mean,\n",
+    "                    0.0,\n",
+    "                    time.time() - start_time,\n",
+    "                ),\n",
+    "                end=\"\\r\",\n",
+    "            )\n",
     "\n",
     "    tensorboard.add_scalar(\"val/acc_1\", acc_1.mean, epoch)\n",
     "    tensorboard.add_scalar(\"val/acc_2\", acc_2.mean, epoch)\n",
-    "    \n",
-    "    tensorboard.add_scalar(\"max/acc_1\", maximum_fn(\"acc_1\", acc_1.mean), epoch )\n",
-    "    tensorboard.add_scalar(\"max/acc_2\", maximum_fn(\"acc_2\", acc_2.mean), epoch )\n",
-    "    \n",
+    "\n",
+    "    tensorboard.add_scalar(\"max/acc_1\", maximum_fn(\"acc_1\", acc_1.mean), epoch)\n",
+    "    tensorboard.add_scalar(\"max/acc_2\", maximum_fn(\"acc_2\", acc_2.mean), epoch)\n",
+    "\n",
     "    tensorboard.add_scalar(\"detail_hyperparameters/lambda_cot\", lambda_cot(), epoch)\n",
-    "    tensorboard.add_scalar(\"detail_hyperparameters/learning_rate\", get_lr(optimizer), epoch)\n",
+    "    tensorboard.add_scalar(\n",
+    "        \"detail_hyperparameters/learning_rate\", get_lr(optimizer), epoch\n",
+    "    )\n",
     "\n",
     "    # Apply callbacks\n",
     "    for c in callbacks:\n",
@@ -635,7 +699,7 @@
     "\n",
     "    # call checkpoint\n",
     "    checkpoint_m1.step(acc_1.mean)\n",
-    "    checkpoint_m2.step(acc_2.mean)\n"
+    "    checkpoint_m2.step(acc_2.mean)"
    ]
   },
   {
@@ -655,7 +719,7 @@
     }
    ],
    "source": [
-    "a = torch.as_tensor(1.0000e+00)\n",
+    "a = torch.as_tensor(1.0000e00)\n",
     "torch.log(a)"
    ]
   },
@@ -988,11 +1052,11 @@
     "\n",
     "for epoch in range(0, args.nb_epoch):\n",
     "    total_loss = train(epoch)\n",
-    "    \n",
+    "\n",
     "    if np.isnan(total_loss):\n",
     "        print(\"Losses are NaN, stoping the training here\")\n",
     "        break\n",
-    "        \n",
+    "\n",
     "    test(epoch)\n",
     "\n",
     "tensorboard.flush()\n",
